updated all html files with new meta links

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
   <meta property="og:title" content="About Hannah" />
   <meta property="og:description" content="I play a key role in crafting seamless user experiences and beautifully branded, story-telling designs from concept to execution. I work to solve complex problems with creative, user friendly solutions. I aim to deliver results through the implementation of visually captivating and highly effective design solutions." />
   <meta property="og:url" content="https://www.hannahhatherell.com/about.html" />
-  <meta property="og:image" content="img/han.png" />
+  <meta property="og:image" content="https://www.hannahhatherell.com/han.png" />
 
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 
