--- a/euna.html
+++ b/euna.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta property="og:title" content="Euna Solutions (formerly GTY)" />
   <meta property="og:url" content="https://www.hannahhatherell.com/euna.html" />
-  <meta property="og:image" content="img/euna.png" />
+  <meta property="og:url" content="https://www.hannahhatherell.com/euna.png" />
 
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 
