--- a/various.html
+++ b/various.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta property="og:title" content="Various Projects" />
   <meta property="og:url" content="https://www.hannahhatherell.com/various.html" />
-  <meta property="og:image" content="img/meta-various.png" />
+  <meta property="og:image" content="https://www.hannahhatherell.com/various.png" />
 
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 
