--- a/canopy.html
+++ b/canopy.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta property="og:title" content="Canopy Growth Corporation" />
   <meta property="og:url" content="https://www.hannahhatherell.com/canopy.html" />
-  <meta property="og:image" content="img/meta-canopy.png" />
+  <meta property="og:image" content="https://www.hannahhatherell.com/canopy.png" />
 
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 
