--- a/cmg.html
+++ b/cmg.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta property="og:title" content="Coyle Media Group" />
   <meta property="og:url" content="https://www.hannahhatherell.com/cmg.html" />
-  <meta property="og:image" content="img/meta-cmg.png" />
+  <meta property="og:url" content="https://www.hannahhatherell.com/cmg.png" />
 
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 
