--- a/csp.html
+++ b/csp.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta property="og:title" content="Canadian Science Publishing" />
   <meta property="og:url" content="https://www.hannahhatherell.com/csp.html" />
-  <meta property="og:image" content="img/meta-csp.png" />
+  <meta property="og:image" content="https://www.hannahhatherell.com/csp.png" />
 
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 
