--- a/hhi.html
+++ b/hhi.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta property="og:title" content="Half Halt Illustrations" />
   <meta property="og:url" content="https://www.hannahhatherell.com/hhi.html" />
-  <meta property="og:image" content="img/meta-hhi.png" />
+  <meta property="og:image" content="https://www.hannahhatherell.com/hhi.png" />
 
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 
