--- a/masterpiece-vr.html
+++ b/masterpiece-vr.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta property="og:title" content="MasterpieceVR (Masterpiece Studio)" />
   <meta property="og:url" content="https://www.hannahhatherell.com/masterpiece-vr.html" />
-  <meta property="og:image" content="img/meta-mpvr.png" />
+  <meta property="og:image" content="https://www.hannahhatherell.com/mpvr.png" />
 
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 
