--- a/nng.html
+++ b/nng.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta property="og:title" content="Nielsen Norman Group" />
   <meta property="og:url" content="https://www.hannahhatherell.com/nng.html" />
-  <meta property="og:image" content="img/meta-nng.png" />
+  <meta property="og:image" content="https://www.hannahhatherell.com/nng.png" />
 
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 
