--- a/questica.html
+++ b/questica.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta property="og:title" content="Questica, a Euna Solutions Brand" />
   <meta property="og:url" content="https://www.hannahhatherell.com/questica.html" />
-  <meta property="og:image" content="img/meta-questica.png" />
+<meta property="og:image" content="https://www.hannahhatherell.com/questica.png" />
 
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 
