pushing major improvements
there's still some jankiness to sort out, but I can do that later. Can't keep eyes open anymore.

--- a/euna.html
+++ b/euna.html
@@ -40,7 +40,7 @@
   <nav class="navbar navbar-expand-lg fixed-top text-uppercase" id="mainNav">
     <div class="container">
       <!--<a href="index.html"><img src="img/logo.svg"></a>-->
-      <a class="navbar-brand js-scroll-trigger pl-3" href="index.html" style="font-weight: 800; letter-spacing: 1px; font-size: 18px;">Hannah Hatherell</a>
+      <a class="navbar-brand js-scroll-trigger" href="index.html" style="font-weight: 800; letter-spacing: 1px; font-size: 18px;">Hannah Hatherell</a>
       <button class="navbar-toggler navbar-toggler-right text-uppercase text-primary" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <i class="fa fa-bars"></i>
       </button>
@@ -55,10 +55,10 @@
             <div class="dropdown-menu nav-item" aria-labelledby="dropdownMenuLink">
               <a class="dropdown-item nav-item" href="euna.html">Euna Solutions</a>
               <a class="dropdown-item nav-item" href="bonfire.html">Bonfire Interactive</a>
-              <a class="dropdown-item nav-item" href="questica.html">Questica</a>
+              <a class="dropdown-item nav-item" href="questica.html">Questica Budget</a>
               <a class="dropdown-item nav-item" href="nng.html">Nielsen Norman Group</a>
-              <a class="dropdown-item nav-item" href="masterpiece-vr.html">MasterpieceVR</a>
               <a class="dropdown-item nav-item" href="csp.html">Canadian Science Publishing</a>
+              <a class="dropdown-item nav-item" href="masterpiece-vr.html">MasterpieceVR</a>
               <a class="dropdown-item nav-item" href="cmg.html">Coyle Media Group</a>
               <a class="dropdown-item nav-item" href="canopy.html">Canopy Growth</a>
               <a class="dropdown-item nav-item" href="hhi.html">Half Halt Illustrations</a>
@@ -78,7 +78,7 @@
     </div>
   </nav>
 
-  <section class="mx-auto pt-3" style="background-color: #EBF0FF;">
+  <!--  <section class="mx-auto pt-3" style="background-color: #EBF0FF;">
     <div class="col-sm-8 col-md-10 col-lg-8 mx-auto pt-5">
       <div class="row text-center">
         <div class="text-center mx-auto">
@@ -86,53 +86,59 @@
         </div>
       </div>
     </div>
-  </section>
+  </section>-->
 
-  <section class="pt-5">
-    <div class="container center pb-5">
+  <section class="pt-5 mt-3">
+    <div class="container center pb-4 mt-5">
       <div class="pb-2">
-        <h2 class="pb-0 mb-2" style="font-size: 36px;">Euna Solutions (formerly GTY)</h2>
-        <p style="font-size: 14px; font-weight: 400;">Design System | Landing Pages</p>
+        <h2 style="font-size: 20px; font-weight: 600">Euna Solutions (formerly GTY)</h2>
       </div>
-      <div class="row">
-        <div class="col-sm-12 col-md-8 col-xl-8">
-          <p class="gray" style="font-weight: 600;">OVERVIEW</p>
-          <p class="pb-3">Euna Solutions consolidated and rebranded in May 2023 which posed numerous design questions and challenges. I was tasked with crafting a seamless and efficient Design System for Euna's campaign landing pages which could be used easily by the Digital and Design teams.</p>
-        </div>
-        <div class="col-sm-12 col-md-4 col-xl-4">
-          <p class="gray" style="font-weight: 600;">ROLE</p>
-          <span style="font-size: 13px;">
-              <p class="font-weight-bold mb-2">Graphic Designer & Developer</p>
-              <p>Design System, User Interface, User Experience, Interaction, Visual Design, Front-end Web Design, Prototyping & Testing</p>
-            </span>
-        </div>
-      </div>
-    </div>
-  </section>
-
-
-
-  <section class="pt-5 pb-5 bg-lt-blue" style="background-color: #EBF0FF;">
-    <div class="container center">
-      <div class="pb-2">
-        <h4 class="pb-3 font-weight-bold">Background</h4>
-
-        <p>Previously 9 different companies, Euna Solutions delivers best-in-class solutions that keep the public sector thriving. Launched in May 2023, different public sector software companies consolidated to offer a platform of products.</p>
-        <p>I collaborated closely with a dynamic team of three designers and the Digital and Product teams, making significant contributions to the Marketing and Sales departments. My core design responsibilities included website audits, creating compelling landing pages, presentations, eBooks, and various campaign creative, ensuring a consistent and impactful brand presence across all channels.</p>
-        <p style="font-weight: 600;">I accomplished these key achievements:</p>
+      <div>
+        <p>At Euna (SaaS), I collaborated closely with a dynamic team of three designers and the Digital and Product teams, making significant contributions to the Marketing and Sales departments. My core design responsibilities involved creation of brand and marketing collateral, campaign creative such as compelling landing pages, presentations, eBooks, whitepapers, ads, emails banners etc. ensuring a consistent and impactful brand presence across all channels.</p>
+        <p style="font-weight: 600;">My key contributions:</p>
         <ul>
-          <li class="pb-1"><span style="font-weight: 600;">Enhanced processes,</span> reducing campaign launch time through strategic design solutions.</li>
-            <li><span style="font-weight: 600;">Facilitated a swift rebrand</span> with exceptional organizational and time management skills.</li>
-          <li class="pb-1"><span style="font-weight: 600;">Improved campaign impact</span> and performance by working cross-functionally and delivering visually compelling, brand-consistent graphics.</li>
-          <li class="pb-1"><span style="font-weight: 600;">Boosted design team efficiency</span> by implementing template and brand libraries in addition to standardized file systems.</li>
-          <li class="pb-1"><span style="font-weight: 600;">Consistently maintained</span> high-quality work across diverse product lines.</li>
+          <li class="pb-2"><span style="font-weight: 600;">Delivered high-impact marketing and brand collateral,</span> strengthening brand presence and increasing campaign performance across all channels.</li>
+          <li class="pb-2"><span style="font-weight: 600;">Created a design system</span> for campaign landing pages that effectively decreased campaign turnaround time.</li>
+          <li class="pb-2"><span style="font-weight: 600;">Facilitated a swift rebrand</span> with exceptional organizational and time management skills.</li>
+          <li class="pb-2"><span style="font-weight: 600;">Boosted team efficiency</span> by creating and implementing brand libraries, templates and standardized file systems.</li>
         </ul>
       </div>
     </div>
   </section>
 
 
-  <section class="pt-4 pb-5">
+  <section class="pb-4 pt-3">
+    <div class="container center">
+      <div>
+        <div class="text-center">
+          <img class="img-fluid pb-3" src="img/euna/euna-2.png">
+          <p class="pt-0 mt-0 text-center caption">Brand Guidelines</p>
+        </div>
+        <div class="text-center">
+          <img class="img-fluid" src="img/euna/euna-cards.png">
+          <p class="pt-0 mt-0 pb-3 pt-3 text-center caption">Business Cards</p>
+        </div>
+        <div class="text-center">
+          <img class="img-fluid pb-3" src="img/euna/euna-4.png">
+          <p class="pt-0 mt-0 pb-5 text-center caption">Euna Budget Whitepaper</p>
+        </div>
+        <div class="text-center">
+          <img class="img-fluid" src="img/euna/euna-1.png">
+          <p class="pt-0 mt-0 pb-3 pt-3 text-center caption">Landing Pages</p>
+        </div>
+        <div class="text-center">
+          <img class="img-fluid" src="img/euna/euna-5.png">
+          <p class="pt-0 mt-0 pb-3 pt-3 text-center caption">Landing Page Guidelines</p>
+        </div>
+        <div class="text-center">
+          <img class="img-fluid pb-3" src="img/euna/euna-3.png">
+          <p class="pt-0 mt-0 pb-3 text-center caption">Additional Euna Brand Applications</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!--<section class="pt-4 pb-5">
     <div class="container center">
       <div>
         <h4 class="pt-5 pb-3 mb-0 font-weight-bold">Understanding the problem</h4>
@@ -203,10 +209,11 @@
             <h5>System rules and style guides</h5>
             <p>Another component of the Design System was a Visual Guide outlining responsibilties, global and category-specific rules, colour pathing examples, locations to corresponding assets within the SharePoint asset library.</p>
             <img class="img-fluid" src="img/euna/euna-5.png">
+            <img class="img-fluid" src="img/euna/euna-1.png" alt="">
             <p class="pt-0 mt-0 pb-3 text-center caption">A snapshot of the Design System Rules.</p>
           </div>
         </div>
-        </section>
+      </section>
 
 
   <section class="pt-3 pb-3">
@@ -222,76 +229,68 @@
         </ul>
       </div>
     </div>
-  </section>
+  </section>-->
 
-
-  <section class="pb-4 pt-4" style="background-color: #e3e6f4;">
+  <section class="pb-4 pt-4">
     <div class="container center">
-      <h4 class="pt-5 pb-5 mb-0 font-weight-bold">Euna Solutions: Other Work & Contributions</h4>
-      <div>
-        <div class="text-center">
-          <img class="img-fluid pb-3" src="img/euna/euna-3.png">
-          <p class="pt-0 mt-0 pb-3 text-center caption">Euna Brand Applications</p>
-        </div>
-        <div class="text-center">
-          <img class="img-fluid pb-3" src="img/euna/euna-2.png">
-          <p class="pt-0 mt-0 text-center caption">Euna Brand Guidelines</p>
-        </div>
-        <div class="text-center">
-          <img class="img-fluid" src="img/euna/euna-4.png">
-          <p class="pt-0 mt-0 pb-5 text-center caption">Euna Budget Whitepaper</p>
-        </div>
-        <div class="text-center">
-          <img class="img-fluid" src="img/euna/euna-cards.png">
-          <p class="pt-0 mt-0 pb-3 pt-3 text-center caption">Euna Business Cards</p>
-        </div>
-      </div>
-    </div>
+      <ul class="scope-list">
+        <li>Brand</li>
+        <li>Marketing</li>
+        <li>UX</li>
+        <li>Frontend</li>
+        <li>Events</li>
+        <li>Digital</li>
+        <li>Frontend</li>
+      </ul>
   </section>
 
   <!-- <div class="bb mb-5 pt-0"></div>-->
 
 
-  <section class="pb-0 pt-5">
+  <section class="pb-3 pt-3">
     <div class="container">
-      <p class="font-weight-bold text-center">More Projects</p>
       <div class="row pt-4 pb-2">
         <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
-          <a href="bonfire.html"><img class="img-fluid project" src="img/bonfire.png"></a>
+          <div class="pb-4">
+            <a href="bonfire.html"><img class="img-fluid project" src="img/bonfire-1.png"></a>
+          </div>
+          <p class="project-sub">Campaign. Design. Marketing.</p>
+          <h5 class="project-title">Bonfire Interactive</h5>
         </div>
         <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
-          <a href="questica.html"><img class="img-fluid project" src="img/questica.png"></a>
+          <div class="pb-4">
+            <a href="questica.html"><img class="img-fluid project" src="img/questica-1.png"></a>
+          </div>
+          <p class="project-sub">Campaign. Design. Postcards.</p>
+          <h5 class="project-title">Questica Budget</h5>
         </div>
       </div>
     </div>
-    </div>
   </section>
 
+  <section style="background-color: #f8f9fa;" class="pt-5">
+    <footer id="connect" class="center text-center pb-3" id="footer">
+      <div class="container">
+        <ul class="list-inline">
+          <li class="list-inline-item">
+            <p style="color: #868e96;" class="font-weight-bold list-inline">Let's Connect > </p>
+          </li>
+          <li class="list-inline-item">
+            <a class="text-center connect" href="https://www.linkedin.com/in/hannahhatherell/" target="_blank">
+                <i class="fab fa-linkedin-in"></i>
+              </a>
+          </li>
+          <li class="list-inline-item">
+            <a class="text-center" href="mailto:hannahhatherell@gmail.com" target="_blank">
+                <i class="fas fa-envelope"></i>
+              </a>
+          </li>
+        </ul>
+        <small>©2024 Built by Hannah Hatherell | Hosted on Github <i class="fab fa-github"></i></small>
+      </div>
+    </footer>
+  </section>
 
-
-
-  <footer id="connect" class="footer center text-center pb-3" id="footer">
-    <div class="container">
-      <h5 class="font-weight-bold mb-3">Let's Connect</h5>
-      <p>Get in touch for opportunities or just to say hi! 👋</p>
-      <ul class="list-inline mb-3">
-        <li class="list-inline-item">
-          <a class="btn btn-gray text-center rounded-circle" href="https://www.linkedin.com/in/hannahhatherell/" target="_blank">
-                  <i class="fab fa-linkedin-in"></i>
-                </a>
-        </li>
-        <li class="list-inline-item">
-          <a class="btn btn-gray text-center rounded-circle" href="mailto:hannahhatherell@gmail.com" target="_blank">
-                  <i class="fas fa-envelope"></i>
-                </a>
-        </li>
-      </ul>
-  </footer>
-
-  <div class="copyright py-4 text-center" <div class="container pt-1">
-    <small>©2024 Built by Hannah Hatherell | Hosted on Github <i class="fab fa-github"></i></small>
-  </div>
-  </div>
 
   <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
   <div class="scroll-to-top d-lg-none position-fixed ">
@@ -299,8 +298,6 @@
         <i class="fa fa-chevron-up"></i>
       </a>
   </div>
-
-
 
 
   <!-- Bootstrap core JavaScript -->
