--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <nav class="navbar navbar-expand-lg fixed-top text-uppercase" id="mainNav">
     <div class="container">
       <!--<a href="index.html"><img src="img/logo.svg"></a>-->
-      <a class="navbar-brand js-scroll-trigger pl-3" href="index.html" style="font-weight: 800; letter-spacing: 1px; font-size: 18px;">Hannah Hatherell</a>
+      <a class="navbar-brand js-scroll-trigger" href="index.html" style="font-weight: 800; letter-spacing: 1px; font-size: 18px;">Hannah Hatherell</a>
       <button class="navbar-toggler navbar-toggler-right text-uppercase text-primary" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <i class="fa fa-bars"></i>
       </button>
@@ -59,10 +59,10 @@
             <div class="dropdown-menu nav-item" aria-labelledby="dropdownMenuLink">
               <a class="dropdown-item nav-item" href="euna.html">Euna Solutions</a>
               <a class="dropdown-item nav-item" href="bonfire.html">Bonfire Interactive</a>
-              <a class="dropdown-item nav-item" href="questica.html">Questica</a>
+              <a class="dropdown-item nav-item" href="questica.html">Questica Budget</a>
               <a class="dropdown-item nav-item" href="nng.html">Nielsen Norman Group</a>
-              <a class="dropdown-item nav-item" href="masterpiece-vr.html">MasterpieceVR</a>
               <a class="dropdown-item nav-item" href="csp.html">Canadian Science Publishing</a>
+              <a class="dropdown-item nav-item" href="masterpiece-vr.html">MasterpieceVR</a>
               <a class="dropdown-item nav-item" href="cmg.html">Coyle Media Group</a>
               <a class="dropdown-item nav-item" href="canopy.html">Canopy Growth</a>
               <a class="dropdown-item nav-item" href="hhi.html">Half Halt Illustrations</a>
@@ -82,8 +82,6 @@
     </div>
   </nav>
 
-
-
   <!-- <section id="masthead" class="banner">
     <div class="banner-text col-sm-8 col-md-8 col-lg-6 mx-auto text-center pt-5">
       <h1>Design for <strong class="banner-h1">experience.</strong></h1>
@@ -92,8 +90,6 @@
     </div>
 
   </section> -->
-
-
   <!-- Projects Grid Section
   <section class="pt-5 mx-auto bg-secondary" id="featured">
     <div class="container">
@@ -111,98 +107,105 @@
     </div>
   </div>
 </section>-->
-
   <!-- About Section -->
-
-
-
   <!-- RECENT WORK -->
-
-
-  <section class="pt-5 mt-5">
+  <section class="pt-5 mt-5 pb-4">
     <div class="container center">
       <div>
-        <h5 class="pt-3 mt-5 pl-4 pr-4 text-center pb-1" style="font-size: 36px; font-weight: 300;">Hi, I'm Hannah 👋</span></h5>
-        <h5 class="pl-4 pr-4 text-center" style="line-height: 34px; font-size: 30px; font-weight: 200;">I’m an experienced designer with a marketing background, who is enthusiastic about solving complex problems with design solutions.</h5>
-        <br>
-        <div class="text-center ixdf-mobile">
+        <h1 class="pl-5 pr-5 pt-4 text-center" style="line-height: 32px; font-size: 26px; font-weight: 500;">Hi, I'm Hannah 👋 I’m an experienced designer with a marketing background, who enjoys solving complex problems with design solutions.</h1>
+        <!--<h1 class="pl-5 pr-5 text-center pt-4" style="line-height: 26px; font-size: 27px; font-weight: 300;">Hi, I'm Hannah 👋</h1>
+        <h1 class="text-center pl-4 pr-4" style="line-height: 26px; font-size: 24px; font-weight: 200;">I’m an experienced designer with a marketing background, who enjoys solving complex problems with design solutions.</h1>-->
+        <!--<div class="text-center ixdf-mobile">
           <img class="w-50 pl-3 pr-3 pb-2" src="img/ixdf.png" alt="">
         </div>
         <div class="text-center ixdf-desktop">
           <img class="w-25 pl-3 pr-3 pb-2" src="img/ixdf.png" alt="">
         </div>
         <p class="text-center" style="font-size: 12px; font-style: italic;">I am an active member of the Interaction Design Foundation.</p>
+      </div>-->
       </div>
-    </div>
   </section>
 
-
-
-  <div class="container">
-    <div class="row pt-5">
+  <div class="container pb-3">
+    <div class="row pt-4">
       <div class="col-sm-6">
         <a class="d-block mx-auto mb-4" href="euna.html">
-        <img class="img-fluid project" src="img/euna.png">
+        <img class="img-fluid project" src="img/euna-2.png">
       </a>
+        <p class="project-sub">Design. Marketing. Brand.</p>
+        <h5 class="project-title">Euna Solutions</h5>
       </div>
       <div class="col-sm-6">
         <a class="d-block mx-auto mb-4" href="bonfire.html">
-        <img class="img-fluid project" src="img/bonfire.png">
+        <img class="img-fluid project" src="img/bonfire-1.png">
       </a>
+        <p class="project-sub">Campaign. Design. Marketing.</p>
+        <h5 class="project-title">Bonfire Interactive</h5>
       </div>
       <div class="w-100"></div>
       <div class="col-sm-6">
         <a class="d-block mx-auto mb-4" href="questica.html">
-      <img class="img-fluid project" src="img/questica.png">
+      <img class="img-fluid project" src="img/questica-1.png">
     </a>
+        <p class="project-sub">Campaign. Design. Postcards.</p>
+        <h5 class="project-title">Questica Budget</h5>
       </div>
       <div class="col-sm-6">
         <a class="d-block mx-auto mb-4" href="nng.html">
-        <img class="img-fluid project" src="img/nng.png">
+        <img class="img-fluid project" src="img/nng-1.png">
       </a>
+        <p class="project-sub">Book Cover. Visual System. Design.</p>
+        <h5 class="project-title">Nielsen Norman Group</h5>
       </div>
     </div>
 
-    <div class="row">
-      <div class="col-sm-6">
-        <a class="d-block mx-auto mb-4" href="masterpiece-vr.html">
-        <img class="img-fluid project" src="img/mpvr.png">
-      </a>
-      </div>
+    <div class="row pb-3">
       <div class="col-sm-6">
         <a class="d-block mx-auto mb-4" href="csp.html">
-        <img class="img-fluid project" src="img/csp.png">
+        <img class="img-fluid project" src="img/csp-1.png">
       </a>
+        <p class="project-sub">UX. Frontend. Illustration.</p>
+        <h5 class="project-title">Canadian Science Publishing</h5>
+      </div>
+      <div class="col-sm-6">
+        <a class="d-block mx-auto mb-4" href="masterpiece-vr.html">
+        <img class="img-fluid project" src="img/mpvr-1.png">
+      </a>
+        <p class="project-sub">UX. UI. Virtual Reality.</p>
+        <h5 class="project-title">MasterpieceVR</h5>
       </div>
       <div class="w-100"></div>
       <div class="col-sm-6">
         <a class="d-block mx-auto mb-4" href="cmg.html">
-        <img class="img-fluid project" src="img/cmg.png">
+        <img class="img-fluid project" src="img/cmg-1.png">
       </a>
+        <p class="project-sub">Magazines. Design. Process.</p>
+        <h5 class="project-title">Coyle Media Group</h5>
       </div>
       <div class="col-sm-6">
         <a class="d-block mx-auto mb-4" href="canopy.html">
-        <img class="img-fluid project" src="img/canopy.png">
+        <img class="img-fluid project" src="img/canopy-1.png">
       </a>
+        <p class="project-sub">Photography. eCommerce. Production.</p>
+        <h5 class="project-title">Canopy Growth Corporation</h5>
       </div>
       <div class="w-100"></div>
       <div class="col-sm-6">
         <a class="d-block mx-auto mb-4" href="hhi.html">
-          <img class="img-fluid project" src="img/hhi.png">
+          <img class="img-fluid project hhi-border" src="img/hhi-1.png">
         </a>
+        <p class="project-sub">Illustration. Branding. Passion Project.</p>
+        <h5 class="project-title">Half Halt Illustrations</h5>
       </div>
       <div class="col-sm-6">
         <a class="d-block mx-auto mb-4" href="various.html">
-          <img class="img-fluid project" src="img/various.png">
+          <img class="img-fluid project" src="img/various-1.png">
         </a>
+        <p class="project-sub">Code. Design. Illustration.</p>
+        <h5 class="project-title">Various Works</h5>
       </div>
     </div>
   </div>
-
-
-
-
-
 
   <!-- <section class="recent-work pb-4" id="recent-work">
 
@@ -230,11 +233,6 @@
             </a>
           </div>
         </section> -->
-
-
-
-
-
   <!-- CSP Section
   <section class="publications text-center pb-4 text-white" id="csp" style="background-color: #282c30;">
     <a href="http://cdnsciencepub.com" target="_blank"><img class="c-logo-1 img-fluid project pb-4 pt-5" src="img/brands/csp.png" alt=""></a>
@@ -263,8 +261,6 @@
         </div>
     </div>
   </section> -->
-
-
   <!-- Canopy
   <section class="publications text-center pt-3 pb-5 bg-white" id="canopy">
     <div class="container">
@@ -286,8 +282,6 @@
 
     </div>
   </section> -->
-
-
   <!-- Illustration Section
   <section class="publications text-center pb-4 text-white" id="illustration" style="background-color: #282c30;">
 
@@ -317,9 +311,6 @@
       </div>
     </div>
   </section>-->
-
-
-
   <!-- Photography Section
   <section class="publications bg-secondary text-center" id="photography">
     <a href="photography.html" class="vimeo-lg">
@@ -331,8 +322,6 @@
 </a>
 
 </section>-->
-
-
   <!-- UX Section
   <section class="pt-5 pb-5 bg-secondary" id="portfolio">
     <div class="container">
@@ -354,10 +343,6 @@
       </div>
     </div>
   </section> -->
-
-
-
-
   <!-- CMG section
     <section class="pt-3 pb-5 text-white text-center" id="cmg" style="background-color: #282c30;">
       <div class="container">
@@ -380,8 +365,6 @@
             <p class="text-center pb-3 text-uppercase text-white">Luxe Magazine Ottawa<br>Spring/Summer 2019</p>
           </div>
         </div> -->
-
-
   <!-- Desktop 2
         <div class="row pt-3 mx-auto">
           <div class="col-lg-6 cards-desktop mx-auto">
@@ -401,10 +384,6 @@
         </div>
       </div>
     </section> -->
-
-
-
-
   <!-- Branding Section
   <section class="publications bg-secondary text-center pb-5" id="branding">
 
@@ -429,9 +408,6 @@
       </div>
     </div>
   </section> -->
-
-
-
   <!-- Motion Graphics Section
   <section class="publications text-center text-white pb-5" id="mographs" style="background-color: #282c30;">
 
@@ -452,8 +428,6 @@
     </div>
 
   </section> -->
-
-
   <!-- Web Section
   <section class="pt-5 pb-5 bg-secondary" id="web">
 
@@ -469,10 +443,6 @@
           <p class="text-center text-uppercase">Snowbird Haven Website</p>
         </div>
   </section>-->
-
-
-
-
   <!-- Web Section 3
   <section class="publications text-center pt-3 pb-5 bg-secondary" id="web">
 
@@ -502,9 +472,6 @@
       </div>
     </div>
   </section> -->
-
-
-
   <!-- Cmg branding guidlelines section
   <section class="pt-5 pb-5" id="portfolio">
     <div class="container">
@@ -534,8 +501,6 @@
       </div>
     </div>
   </section> -->
-
-
   <!-- Footer old
   <footer id="connect" class="footer text-center pb-3" id="footer">
     <div class="container">
@@ -604,29 +569,53 @@
       </div>
   </footer>-->
 
+  <section style="background-color: #f8f9fa;" class="pt-5">
+    <footer id="connect" class="center text-center pb-3" id="footer">
+      <div class="container">
+        <ul class="list-inline">
+          <li class="list-inline-item">
+            <p style="color: #868e96;" class="font-weight-bold list-inline">Let's Connect > </p>
+          </li>
+          <li class="list-inline-item">
+            <a class="text-center connect" href="https://www.linkedin.com/in/hannahhatherell/" target="_blank">
+                <i class="fab fa-linkedin-in"></i>
+              </a>
+          </li>
+          <li class="list-inline-item">
+            <a class="text-center" href="mailto:hannahhatherell@gmail.com" target="_blank">
+                <i class="fas fa-envelope"></i>
+              </a>
+          </li>
+        </ul>
+        <small>©2024 Built by Hannah Hatherell | Hosted on Github <i class="fab fa-github"></i></small>
+      </div>
+    </footer>
+  </section>
 
-  <footer id="connect" class="footer center text-center pt-5 pb-3" id="footer">
-    <div class="container">
-      <h5 class="font-weight-bold mb-3">Let's Connect</h5>
-      <p>Get in touch for opportunities or just to say hi! 👋</p>
-      <ul class="list-inline mb-3">
-        <li class="list-inline-item">
-          <a class="btn btn-gray text-center rounded-circle" href="https://www.linkedin.com/in/hannahhatherell/" target="_blank">
+  <!--<div class="bb-footer pt-5 pb-0 mb-0"></div>
+
+    <footer id="connect" class="footer center text-center pt-5 pb-3" id="footer">
+      <div class="container">
+        <ul class="list-inline">
+          <li class="list-inline-item">
+            <p class="font-weight-bold mb-3 list-inline">Let's Connect > </p>
+          </li>
+          <li class="list-inline-item">
+            <a class="text-center connect" href="https://www.linkedin.com/in/hannahhatherell/" target="_blank">
                   <i class="fab fa-linkedin-in"></i>
                 </a>
-        </li>
-        <li class="list-inline-item">
-          <a class="btn btn-gray text-center rounded-circle" href="mailto:hannahhatherell@gmail.com" target="_blank">
+          </li>
+          <li class="list-inline-item">
+            <a class="text-center" href="mailto:hannahhatherell@gmail.com" target="_blank">
                   <i class="fas fa-envelope"></i>
                 </a>
-        </li>
-      </ul>
-  </footer>
-
-  <div class="copyright py-4 text-center" <div class="container pt-1">
-    <small>©2024 Built by Hannah Hatherell | Hosted on Github <i class="fab fa-github"></i></small>
-  </div>
-  </div>
+          </li>
+        </ul>
+      </div>
+      <div class="copyright pb-3 pt-2 text-center" <div class="container">
+        <small>©2024 Built by Hannah Hatherell | Hosted on Github <i class="fab fa-github"></i></small>
+      </div>
+    </footer>-->
 
   <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
   <div class="scroll-to-top d-lg-none position-fixed ">
@@ -634,8 +623,6 @@
         <i class="fa fa-chevron-up"></i>
       </a>
   </div>
-
-
 
 
   <!-- Bootstrap core JavaScript -->
