--- a/about.html
+++ b/about.html
@@ -6,7 +6,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta property="og:title" content="About Hannah" />
-  <meta property="og:description" content="I play a key role in crafting seamless user experiences and beautifully branded, story-telling designs from concept to execution. I work to solve complex problems with creative, user friendly solutions. I aim to deliver results through the implementation of visually captivating and highly effective design solutions." />
+  <meta property="og:description" content="I play a key role in crafting seamless user experiences and beautifully branded, story-telling designs from concept to execution. I work to solve complex problems with creative, user friendly solutions. I aim to deliver results through the implementation of visually captivating and highly effective design solutions."
+  />
   <meta property="og:url" content="https://www.hannahhatherell.com/about.html" />
   <meta property="og:image" content="https://www.hannahhatherell.com/han.png" />
 
@@ -41,7 +42,7 @@
   <nav class="navbar navbar-expand-lg fixed-top text-uppercase" id="mainNav">
     <div class="container">
       <!--<a href="index.html"><img src="img/logo.svg"></a>-->
-      <a class="navbar-brand js-scroll-trigger pl-3" href="index.html" style="font-weight: 800; letter-spacing: 1px; font-size: 18px;">Hannah Hatherell</a>
+      <a class="navbar-brand js-scroll-trigger" href="index.html" style="font-weight: 800; letter-spacing: 1px; font-size: 18px;">Hannah Hatherell</a>
       <button class="navbar-toggler navbar-toggler-right text-uppercase text-primary" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <i class="fa fa-bars"></i>
       </button>
@@ -56,10 +57,10 @@
             <div class="dropdown-menu nav-item" aria-labelledby="dropdownMenuLink">
               <a class="dropdown-item nav-item" href="euna.html">Euna Solutions</a>
               <a class="dropdown-item nav-item" href="bonfire.html">Bonfire Interactive</a>
-              <a class="dropdown-item nav-item" href="questica.html">Questica</a>
+              <a class="dropdown-item nav-item" href="questica.html">Questica Budget</a>
               <a class="dropdown-item nav-item" href="nng.html">Nielsen Norman Group</a>
-              <a class="dropdown-item nav-item" href="masterpiece-vr.html">MasterpieceVR</a>
               <a class="dropdown-item nav-item" href="csp.html">Canadian Science Publishing</a>
+              <a class="dropdown-item nav-item" href="masterpiece-vr.html">MasterpieceVR</a>
               <a class="dropdown-item nav-item" href="cmg.html">Coyle Media Group</a>
               <a class="dropdown-item nav-item" href="canopy.html">Canopy Growth</a>
               <a class="dropdown-item nav-item" href="hhi.html">Half Halt Illustrations</a>
@@ -127,10 +128,11 @@
         <div class="container pt-0">
           <div class="row pt-5">
             <div class="col-sm-6">
-              <h1 class="text-left font-weight-light" style="font-size: 44px;"><span style="font-weight: 300;">I</span>  <span class="intro-1" style="font-weight:800;">design</span>, <span class="intro-2" style="font-weight:800;">code</span><br> & <span class="intro-3" style="font-weight:800;">illustrate</span>.</h1>
+              <h1 class="text-left font-weight-light" style="font-size: 60px;"><span style="font-weight: 300;">I</span>  <span class="intro-1" style="font-weight:800;">design</span>, <span class="intro-2" style="font-weight:800;">illustrate</span><br> & <span class="intro-3" style="font-weight:800;">code</span>.</h1>
             </div>
             <div class="col-sm-6 pb-3">
-              <p><span style="font-weight: 500;">I’m <span class="intro-0">Hannah Hatherell</span>, an experienced designer based in Ottawa, Ontario.</span><br><br> I play a key role in crafting seamless user experiences and beautifully branded, story-telling designs from concept to execution. I work to solve complex problems with creative, user friendly solutions. I aim to deliver results through the implementation of visually captivating and highly effective design solutions.<br><br>Most recently, as Graphic Designer and Developer at Euna Solutions, I applied UX principles to craft top-tier marketing collateral tailored for SaaS solutions.</p>
+              <p><span style="font-weight: 500;">I’m <span class="intro-0">Hannah Hatherell</span>, an experienced designer based in Ottawa, Ontario.</span><br><br> I play a key role in crafting seamless user experiences and beautifully branded, story-telling designs from concept to execution. I work to solve complex problems with creative, user friendly solutions.<br><br>Most recently, as Graphic Designer and Developer at Euna Solutions, I applied UX principles to craft top-tier marketing
+                collateral tailored for SaaS solutions.</p>
               <ul class="list-inline mb-3">
                 <li class="list-inline-item">
                   <p class="font-weight-bold mb-3 list-inline">Let's connect > </p>
@@ -151,95 +153,84 @@
         </div>
       </div>
     </div>
-    </div>
   </section>
 
   <div class="bb"></div>
 
-    <div class="container pb-5 mb-5">
-      <div class="row center">
-        <div class="container pt-0">
-          <div class="row pt-5">
-            <div class="col-sm-6">
-              <img class="ixdf-desktop w-50 pr-5 pb-2" src="img/ixdf.png" alt="">
-              <img class="ixdf-mobile w-50 pb-2" src="img/ixdf.png" alt="">
-              <h5 class="text-left font-weight-light"><span style="font-weight: 500; font-size: 20px; letter-spacing: .2px;">CERTIFICATIONS</h5>
-            </div>
-            <div class="col-sm-6 pt-3" style="font-style: italic; font-size: 14px;">
-              <p style="font-style: normal; font-weight: 400;">I'm currently learning:</p>
-              <p class="mb-1">AI for Designers</p>
-              <p class="mb-1">UX Design for Virtual Reality</p>
-              <p class="mb-1">Data-Driven Design: Quantitative Research for UX</p>
-              <p class="mb-1">UI Design Patterns for Successful Software</p>
+  <div class="container pb-5 mb-3">
+    <div class="row center">
+      <div class="container pt-0">
+        <div class="row pt-5">
+          <div class="col-sm-6">
+            <img class="ixdf-desktop w-50 pr-5 pb-2" src="img/ixdf.png" alt="">
+            <img class="ixdf-mobile w-50 pb-2" src="img/ixdf.png" alt="">
+            <h5 class="text-left font-weight-light"><span style="font-weight: 500; font-size: 20px; letter-spacing: .2px;">CERTIFICATIONS</h5>
+          </div>
+          <div class="col-sm-6 pt-3" style="font-style: italic; font-size: 14px;">
+            <p style="font-style: normal; font-weight: 400;">I'm currently learning:</p>
+            <p class="mb-1">AI for Designers</p>
+            <p class="mb-1">User Research Methods and Best Practices</p>
+            <p class="mb-1">Data-Driven Design: Quantitative Research for UX</p>
+            <p class="mb-1">UI Design Patterns for Successful Software</p>
+            <p class="mb-1">UX Design for Virtual Reality</p>
 
-            </div>
           </div>
         </div>
-
       </div>
+
     </div>
-    </div>
-
-
-
+  </div>
+  </div>
 
   <!-- Values -->
 
-  <section class="recent-work bg-yellow pt-0 mt-0 pb-4">
+  <section class="recent-work bg-yellow pt-0 mt-0 pb-4 pl-2 pr-2">
 
     <div class="container">
       <div class="row pt-4 center">
-        <h3 class="pb-5 pt-5 font-weight-bold">My values</h3>
-        <div class="pb-4">
-          <h4 class="font-weight-bold">📚 Always be learning.</h4>
-          <p>Humans are constant works in progress that need to receive feedback in order to grow. I am always looking for ways to challenge and build on my skillset. I like to participate in online courses, read blogs or books on subjects in my field and
-            dabble in new projects.</p>
-        </div>
-        <div class="pb-4">
-          <h4 class="font-weight-bold">🤓 Work smarter, not harder.</h4>
-          <p>I can’t count the amount of times I’ve found myself getting frustrated by repeating the same action multiple times when trying to achieve something. Constantly asking the question “is there a better way to do accomplish this” has opened me up
-            to a world of automated process-learning, and I'll never go back.</p>
-        </div>
-        <div class="pb-4">
-          <h4 class="font-weight-bold">🎨 Embrace your creativity.</h4>
-          <p>Everyone needs a creative outlet of some sort - else, we'd go insane! I like to exercise my creativity through photography. I enjoy collecting vintage analogue cameras and capturing on film with them.</p>
-        </div>
-        <div class="pb-4">
-          <h4 class="font-weight-bold">😌 Stay humble.</h4>
-          <p>It doesn't matter who you are, bottom line is to always treat others with respect as you would yourself. Because ultimately we're all human sharing the same wants and needs and facing our own battles everyday. Stay true to yourself and stay
-            true to others.</p>
-        </div>
+        <h2 style="font-size: 60px; font-weight: 600" class="pt-5 pb-4">My Values</h2>
+      </div>
+      <div class="row center pb-4">
+        <h4 class="font-weight-bold" style="line-height: 36px; font-size: 28px;">📚 Learn and share. 🤓 Stay curious and adventurous. 🙋 Be honest and accountable. 🎨 Embrace creativity. 😌 Stay humble.  🌱 Cultivate community around you.</h4>
       </div>
   </section>
 
 
   <!-- Process -->
 
-  <div class="container pb-4 pt-3">
-    <div class="row center">
-      <div class="container pt-0">
-        <div class="row pt-5">
-          <div class="col-sm-4">
-            <h1 class="text-left font-weight-light pb-2"><span style="font-weight: 300;">My</span> <span class="intro-2" style="font-weight:800;">design</span> <span class="intro-3" style="font-weight:800;">process</span>.</h1>
-          </div>
-          <div class="col-sm-8 pb-3">
-            <ol style="font-size: 12px;">
-              <li style="font-weight: 600;">Sync</li>
-              <p class="pb-1 mb-0"><strong>Review Objectives, Understand Scope, Gather Requirements</strong></p>
+  <div class="container pb-5 pt-5">
+    <div class="center pt-0">
+      <div class="row pt-5">
+        <div class="col-sm-5">
+          <h2 style="font-size: 60px; font-weight: 600; line-height: 70px;">My Design Process</h2>
+          <!--<h1 class="text-left font-weight-light pb-2"><span style="font-weight: 300;">My</span> <span class="intro-2" style="font-weight:800;">design</span> <span class="intro-3" style="font-weight:800;">process</span>.</h1>-->
+        </div>
+        <div class="col-sm-7 pb-3  pl-5">
+          <ul class="scope-list">
+            <li>Sync</li>
+            <li>Research and Ideate</li>
+            <li>Design</li>
+            <li>Share and Revise</li>
+            <li>Implement and Deliver</li>
+            <li>Collect Data</li>
+          </ul>
+          <!--<ol>
+              <li style="font-weight: 600; font-size: 20px;">Sync</li>
+              <p class="pb-2 mb-0"><strong>Review Objectives, Scope, Requirements</strong></p>
               <p>I ask lots of questions during this stage and gather as much information as possible. I like to ensure everyone is on the same page prior to ideation. </p>
-              <li style="font-weight: 600;">Research & Ideate</li>
-              <p class="pb-1 mb-0"><strong>Brainstorm, Document, Conceptualize</strong></p>
+              <li style="font-weight: 600; font-size: 20px;">Research and Ideate</li>
+              <p class="pb-2 mb-0"><strong>Brainstorm, Document, Conceptualize</strong></p>
               <p>This is where the creative juices start flowing. I like to touch base post-ideation with the creative director/manager to ensure the work is on track before getting into the heavier lifting.</p>
-              <li style="font-weight: 600;">Design</li>
-              <p class="pb-1 mb-0"><strong>Wireframes, Mock Ups, Preliminary Designs</strong></p>
+              <li style="font-weight: 600; font-size: 20px;">Design</li>
+              <p class="pb-2 mb-0"><strong>Wireframes, Mock Ups, Preliminary Designs</strong></p>
               <p>I begin to realize ideas and concepts by translating them into initial designs.</p>
-              <li style="font-weight: 600;">Review</li>
-              <p class="pb-1 mb-0"><strong>Present, Review and Revise</strong></p>
+              <li style="font-weight: 600; font-size: 20px;">Share</li>
+              <p class="pb-2 mb-0"><strong>Present, Review and Revise, Iterate</strong></p>
               <p>Iterate between stages 3 & 4 integrating feedback, revisions and communication with project stakeholders.</p>
-              <li style="font-weight: 600;">Deliver & Implement</li>
+              <li style="font-weight: 600; font-size: 20px;">Deliver & Implement</li>
               <p>I extend my design process beyond completion and launch, actively reviewing work performance using metrics and research to refine strategies for better engagement with target audiences.</p>
-            </ol>
-          </div>
+              <p class="pb-2 mb-0"><strong>Collect Performance Data</strong></p>
+            </ol>-->
         </div>
       </div>
 
@@ -254,10 +245,10 @@
 
     <div class="container">
       <div class="row pt-3 center">
-        <h3 class="pt-5 font-weight-bold">Recent Peer Feedback</h3>
+        <h2 style="font-size: 60px; font-weight: 600; line-height: 60px;" class="pt-5 pb-4">Recent Peer Feedback</h2>
         <div class="pb-4">
           <p class="caption">This peer feedback is from anonymous colleagues at Euna Solutions, January 2024.</p>
-          <p class="pb-3"><span style="font-weight: 500;">Hannah has done an amazing job on design tasks for programs.</span> She has strong project management skills and works together with programs managers on timelines to ensure we stay on track. She is detail-oriented
+          <p class="pb-3"><span style="font-weight: 500;">Hannah has done an amazing job on design tasks for programs.</span> <br>She has strong project management skills and works together with programs managers on timelines to ensure we stay on track. She is detail-oriented
             and the quality of her work is consistently excellent. I've loved the work she's put into each design concept. During kick-off calls, Hannah's asks great questions to streamline workflows and ensure that she gathers all project information
             to ensure a successful outcome. She's also always a pleasure to work with.</p>
           <p class="pb-3"><span style="font-weight: 500;">Hannah is awesome at what she does.</span> She is incredibly responsive, whether it's answering questions or working on last minute requests. Her eye for detail is another major strength, catching the small things
@@ -273,7 +264,7 @@
 
     <div class="container">
       <div class="row pt-3 center">
-        <h3 class="pb-3 font-weight-bold">Testimonials</h3>
+        <h2 style="font-size: 60px; font-weight: 600" class="pt-5 pb-4">Testimonials</h2>
         <div class="pb-4">
           <p><span style="font-weight: 500;">In 2021 Hannah has made a substantial contribution to the Marketing and Communications team.</span> Having Hannah work on our team has been seamless. I have not worked with Hannah for that long but in the time
             that I have, I have felt and seen her impact. I continue to be impressed by the work that she produces. Her attention to detail and the time she takes to inform her decisions shows her commitment to her work. Hannah has a positive attitude
@@ -298,35 +289,31 @@
   </section>
 
 
-  <div class="bb-full mb-3"></div>
-
-
   <!-- More -->
 
 
-  <footer id="connect" class="footer center text-center pb-3 pt-5" id="footer">
-    <div class="container">
-      <h5 class="font-weight-bold mb-3">Let's Connect</h5>
-      <p>Get in touch for opportunities or just to say hi! 👋</p>
-      <ul class="list-inline mb-3">
-        <li class="list-inline-item">
-          <a class="btn btn-gray text-center rounded-circle" href="https://www.linkedin.com/in/hannahhatherell/" target="_blank">
-                  <i class="fab fa-linkedin-in"></i>
-                </a>
-        </li>
-        <li class="list-inline-item">
-          <a class="btn btn-gray text-center rounded-circle" href="mailto:hannahhatherell@gmail.com" target="_blank">
-                  <i class="fas fa-envelope"></i>
-                </a>
-        </li>
-      </ul>
-    </div>
-  </footer>
-
-  <div class="copyright py-4 text-center" <div class="container pt-1">
-    <small>©2024 Built by Hannah Hatherell | Hosted on Github <i class="fab fa-github"></i></small>
-  </div>
-  </div>
+  <section style="background-color: #f8f9fa;" class="pt-5">
+    <footer id="connect" class="center text-center pb-3" id="footer">
+      <div class="container">
+        <ul class="list-inline">
+          <li class="list-inline-item">
+            <p style="color: #868e96;" class="font-weight-bold list-inline">Let's Connect > </p>
+          </li>
+          <li class="list-inline-item">
+            <a class="text-center connect" href="https://www.linkedin.com/in/hannahhatherell/" target="_blank">
+                <i class="fab fa-linkedin-in"></i>
+              </a>
+          </li>
+          <li class="list-inline-item">
+            <a class="text-center" href="mailto:hannahhatherell@gmail.com" target="_blank">
+                <i class="fas fa-envelope"></i>
+              </a>
+          </li>
+        </ul>
+        <small>©2024 Built by Hannah Hatherell | Hosted on Github <i class="fab fa-github"></i></small>
+      </div>
+    </footer>
+  </section>
 
   <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
   <div class="scroll-to-top d-lg-none position-fixed ">
