--- a/bonfire.html
+++ b/bonfire.html
@@ -21,7 +21,8 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100;9..40,200;9..40,300;9..40,400;9..40,500;9..40,600;9..40,700;9..40,800;9..40,900&family=Source+Sans+3:wght@300;400;600&family=Work+Sans:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100;9..40,200;9..40,300;9..40,400;9..40,500;9..40,600;9..40,700;9..40,800;9..40,900&family=Source+Sans+3:wght@300;400;600&family=Work+Sans:wght@100;200;300;400;500;600&display=swap"
+    rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
 
@@ -40,7 +41,7 @@
   <nav class="navbar navbar-expand-lg fixed-top text-uppercase" id="mainNav">
     <div class="container">
       <!--<a href="index.html"><img src="img/logo.svg"></a>-->
-      <a class="navbar-brand js-scroll-trigger pl-3" href="index.html" style="font-weight: 800; letter-spacing: 1px; font-size: 18px;">Hannah Hatherell</a>
+      <a class="navbar-brand js-scroll-trigger" href="index.html" style="font-weight: 800; letter-spacing: 1px; font-size: 18px;">Hannah Hatherell</a>
       <button class="navbar-toggler navbar-toggler-right text-uppercase text-primary" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <i class="fa fa-bars"></i>
       </button>
@@ -55,10 +56,10 @@
             <div class="dropdown-menu nav-item" aria-labelledby="dropdownMenuLink">
               <a class="dropdown-item nav-item" href="euna.html">Euna Solutions</a>
               <a class="dropdown-item nav-item" href="bonfire.html">Bonfire Interactive</a>
-              <a class="dropdown-item nav-item" href="questica.html">Questica</a>
+              <a class="dropdown-item nav-item" href="questica.html">Questica Budget</a>
               <a class="dropdown-item nav-item" href="nng.html">Nielsen Norman Group</a>
-              <a class="dropdown-item nav-item" href="masterpiece-vr.html">MasterpieceVR</a>
               <a class="dropdown-item nav-item" href="csp.html">Canadian Science Publishing</a>
+              <a class="dropdown-item nav-item" href="masterpiece-vr.html">MasterpieceVR</a>
               <a class="dropdown-item nav-item" href="cmg.html">Coyle Media Group</a>
               <a class="dropdown-item nav-item" href="canopy.html">Canopy Growth</a>
               <a class="dropdown-item nav-item" href="hhi.html">Half Halt Illustrations</a>
@@ -78,7 +79,7 @@
     </div>
   </nav>
 
-  <section class="mx-auto pt-5 mt-1" style="background-color:#E1D3E0;">
+  <!--<section class="mx-auto pt-5 mt-1" style="background-color:#E1D3E0;">
     <div class="col-sm-8 col-md-10 col-lg-8 mx-auto pt-3">
       <div class="row text-center">
         <div class="text-center mx-auto">
@@ -86,140 +87,153 @@
         </div>
       </div>
     </div>
+  </section>-->
+
+
+  <section class="pt-5 mt-3">
+    <div class="container center pb-4 mt-5">
+      <div class="pb-2">
+        <h2 style="font-size: 20px; font-weight: 600">Bonfire, a Euna Solutions Brand (eProcurement)</h2>
+      </div>
+      <div>
+        <p>Bonfire is one of the multiple product lines I provided Graphic Design support for under Euna Solutions—this project highlights my contributions to Bonfire specifically. Every year, Bonfire releases a State of Public Sourcing Report (SOPS). The 2023 report is backed by comprehensive data from almost 600 U.S. public agencies that use Bonfire.</p>
+        <p style="font-weight: 600;">Design Parameters</p>
+        <ul>
+          <li class="pb-2"><span style="font-weight: 600;">Easy-to-digest.</span> Complex data needed to be easy to read and consume.</li>
+          <li class="pb-2"><span style="font-weight: 600;">Retrofuturism theme.</span> Incorporate retrofuturism into the report while remaining on-brand.</li>
+          <li class="pb-2"><span style="font-weight: 600;">Accomodate content.</span> Use whitespace to balance heavy content and data.</li>
+          <li class="pb-2"><span style="font-weight: 600;">A beautiful experience.</span> Showcase visually-compelling and effective design aesthetics.</li>
+        </ul>
+      </div>
+    </div>
   </section>
 
-    <section class="pt-5">
-      <div class="container center pb-5">
-        <div class="pb-2">
-          <h2 class="pb-0 mb-2" style="font-size: 36px;">Bonfire, a Euna Solutions Brand</h2>
-          <p style="font-size: 14px; font-weight: 400;">Sales & Marketing Campaign | eProcurement</p>
-        </div>
-        <div class="row">
-          <div class="col-sm-12 col-md-8 col-xl-8">
-              <p class="gray" style="font-weight: 600;">OVERVIEW</p>
-              <p>Bonfire releases a State of Public Sourcing Report (SOPS) annually. The 2023 report is backed by data collected between January 1 – May 31, 2023, from almost 600 U.S. public agencies that use Bonfire. The complex data needed to be easy to digest and follow a retrofuturism style.</br><br>Bonfire (now Euna Procure) is a cloud-based procurement software uses a SaaS model.</p>
-            </div>
-            <div class="col-sm-12 col-md-4 col-xl-4">
-              <p class="gray" style="font-weight: 600;">ROLE</p>
-              <span style="font-size: 13px;">
-              <p class="font-weight-bold mb-2">Graphic Designer & Developer</p>
-              <p>User Research, Design Research, Advertising Creative, Visual Design, Landing Page Design</p>
-            </span>
-            </div>
-          </div>
-        </div>
-      </section>
 
+  <div class="text-center pt-3">
+    <img class="img-fluid" src="img/euna/sops-2.png">
+  </div>
 
-      <div class="text-center pt-3">
-        <img class="img-fluid" src="img/euna/sops-2.png">
+  <section class="pt-5 pb-5">
+    <div class="container center">
+      <div class="pb-2">
+        <p class="pt-2 text-center caption">Examples of some final report spreads.</p>
       </div>
+    </div>
+  </section>
 
-      <section class="pt-5 pb-5">
-        <div class="container center">
-          <div class="pb-2">
-            <p class="pt-2 text-center caption">Some examples of the final report spreads.</p>
-            </div>
-          </div>
-        </section>
+  <section class="pt-5 pb-5" style="background-color: #94ACFC;">
+    <div class="container center">
+      <div class="pb-2">
+        <div class="text-center pt-3">
+          <img class="img-fluid" src="img/euna/sops-3.png">
+        </div>
+        <p class="pt-2 text-center caption pr-3 pl-3" style="color:#fff;">A one-pager version of the report for use at events.</p>
+      </div>
+    </div>
+  </section>
 
-        <section class="pt-5 pb-5" style="background-color: #94ACFC;">
-          <div class="container center">
-            <div class="pb-2">
-              <div class="text-center pt-3">
-                <img class="img-fluid" src="img/euna/sops-3.png">
-              </div>
-              <p class="pt-2 text-center caption pr-3 pl-3" style="color:#fff;">A one-pager version of the report for use at events.</p>
-            </div>
-          </div>
-          </section>
-
-          <section class="pt-5 pb-5">
-            <div class="container center">
-              <div class="pb-2">
-                <div class="text-center pt-3">
-                  <img class="img-fluid" src="img/euna/sops-4.png">
-                </div>
-                <p class="pt-2 text-center caption">Digital advertisements and organic social posts.</p>
-              </div>
-            </div>
-            </section>
+  <section class="pt-5 pb-5">
+    <div class="container center">
+      <div class="pb-2">
+        <div class="text-center pt-3">
+          <img class="img-fluid" src="img/euna/sops-4.png">
+        </div>
+        <p class="pt-2 text-center caption">Digital advertisements and organic social posts.</p>
+      </div>
+    </div>
+  </section>
 
 
-      <section class="mx-auto pb-5 mb-5 bg-lt-blue">
+  <section class="mx-auto pb-5 mb-5 bg-lt-blue">
 
-        <div class="col-lg-8 mx-auto pt-4">
-          <video muted class="vimeo-lg" style="width: 640px; height: 360px" controls loop autoplay>
+    <div class="col-lg-8 mx-auto pt-4">
+      <video muted class="vimeo-lg" style="width: 640px; height: 360px" controls loop autoplay>
                 <source src="img/euna/sops-lp.mp4" type="video/mp4">
               </video>
-          <video muted class="vimeo-md" style="width: 540px; height: 260px" controls loop autoplay>
+      <video muted class="vimeo-md" style="width: 540px; height: 260px" controls loop autoplay>
                 <source src="img/euna/sops-lp.mp4" type="video/mp4">
               </video>
-          <video muted class="vimeo-sm" style="width: 275px; height: 160px" controls loop autoplay>
+      <video muted class="vimeo-sm" style="width: 275px; height: 160px" controls loop autoplay>
                 <source src="img/euna/sops-lp.mp4" type="video/mp4">
               </video>
 
-              <p class="pt-2 text-center caption">The landing page ad campaigns pointed to for downloading the report.</p>
-        </section>
+      <p class="pt-2 text-center caption">The landing page ad campaigns pointed to for downloading the report.</p>
+  </section>
 
 
-        <section class="pt-3 pb-3">
-          <div class="container center">
-            <div>
-              <h4 class="pb-3 mb-0 font-weight-bold">Results and takeaways</h4>
-              <ul>
-                <li class="pb-3"><span class="font-weight-bold">Research is essential. </span>I was already familiar with the retrofuturism theme, but to bring this campaign to life I needed to know it inside and out. I studied the history of the era as well as the design history through books, web articles—I even watched a few movies set in that time to get my mind into that space.</li>
-                <li class="pb-3"><span class="font-weight-bold">Good design drives results. </span>Increased the landing page conversion rate by 5.5x the conversion rate for the previous year AND this report recorded the most downloads of all previous years.</li>
-                <li class="pb-3"><span class="font-weight-bold">Consistency is key. </span>Building cohesiveness from page to page was critical in establishing a retrofuturism theme which translated into a beatifully designed campaign.</li>
-                <li class="pb-3"><span class="font-weight-bold">Overcome creative block. </span>It really helped me to connect with my team and bounce ideas around whenever I got stuck on something.</li>
-              </ul>
-            </div>
-          </div>
-          </section>
+<!--  <section class="pt-3 pb-3">
+    <div class="container center">
+      <div>
+        <h4 class="pb-3 mb-0 font-weight-bold">Results and takeaways</h4>
+        <ul>
+          <li class="pb-3"><span class="font-weight-bold">Research is essential. </span>I was already familiar with the retrofuturism theme, but to bring this campaign to life I needed to know it inside and out. I studied the history of the era as well as the design history
+            through books, web articles—I even watched a few movies set in that time to get my mind into that space.</li>
+          <li class="pb-3"><span class="font-weight-bold">Good design drives results. </span>Increased the landing page conversion rate by 5.5x the conversion rate for the previous year AND this report recorded the most downloads of all previous years.</li>
+          <li class="pb-3"><span class="font-weight-bold">Consistency is key. </span>Building cohesiveness from page to page was critical in establishing a retrofuturism theme which translated into a beatifully designed campaign.</li>
+          <li class="pb-3"><span class="font-weight-bold">Overcome creative block. </span>It really helped me to connect with my team and bounce ideas around whenever I got stuck on something.</li>
+        </ul>
+      </div>
+    </div>
+  </section>
 
-          <div class="bb mb-5 pt-5"></div>
+  <div class="bb mb-5 pt-5"></div>-->
 
+  <section class="pb-5 pt-4">
+    <div class="container center">
+      <ul class="scope-list">
+        <li>Illustration</li>
+        <li>UXR</li>
+        <li>Campaign Creative</li>
+        <li>Data Visuals</li>
+        <li>Type Layout</li>
+        <li>LP Design</li>
+      </ul>
+    </div>
+  </section>
 
-          <section class="pb-0">
-            <div class="container">
-              <p class="font-weight-bold text-center">More Projects</p>
-              <div class="row pt-4 pb-2">
-                <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
-                  <a href="questica.html"><img class="img-fluid project" src="img/questica.png"></a>
-                </div>
-                <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
-                    <a href="nng.html"><img class="img-fluid project" src="img/nng.png"></a>
-                  </div>
-                </div>
-            </div>
-            </div>
-            </section>
-
-
-
-
-  <footer id="connect" class="footer center text-center pb-3" id="footer">
+  <section class="pb-0">
     <div class="container">
-      <h5 class="font-weight-bold mb-3">Let's Connect</h5>
-        <p>Get in touch for opportunities or just to say hi! 👋</p>
-          <ul class="list-inline mb-3">
-            <li class="list-inline-item">
-              <a class="btn btn-gray text-center rounded-circle" href="https://www.linkedin.com/in/hannahhatherell/" target="_blank">
-                  <i class="fab fa-linkedin-in"></i>
-                </a>
-            </li>
-            <li class="list-inline-item">
-              <a class="btn btn-gray text-center rounded-circle" href="mailto:hannahhatherell@gmail.com" target="_blank">
-                  <i class="fas fa-envelope"></i>
-                </a>
-            </li>
-          </ul>
-  </footer>
+      <div class="row pt-4 pb-2">
+        <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
+          <div class="pb-4">
+            <a href="euna.html"><img class="img-fluid project" src="img/euna-2.png"></a>
+          </div>
+          <p class="project-sub">Design. Marketing. Brand.</p>
+          <h5 class="project-title">Euna Solutions</h5>
+        </div>
+        <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
+          <div class="pb-4">
+            <a href="nng.html"><img class="img-fluid project" src="img/nng-1.png"></a>
+          </div>
+          <p class="project-sub">Book Cover. Visual System. Design.</p>
+          <h5 class="project-title">Nielsen Norman Group</h5>
+        </div>
+      </div>
+    </div>
+  </section>
 
-  <div class="copyright py-4 text-center" <div class="container pt-1">
-    <small>©2024 Built by Hannah Hatherell | Hosted on Github <i class="fab fa-github"></i></small>
-  </div>
-  </div>
+  <section style="background-color: #f8f9fa;" class="pt-5">
+    <footer id="connect" class="center text-center pb-3" id="footer">
+      <div class="container">
+        <ul class="list-inline">
+          <li class="list-inline-item">
+            <p style="color: #868e96;" class="font-weight-bold list-inline">Let's Connect > </p>
+          </li>
+          <li class="list-inline-item">
+            <a class="text-center connect" href="https://www.linkedin.com/in/hannahhatherell/" target="_blank">
+                <i class="fab fa-linkedin-in"></i>
+              </a>
+          </li>
+          <li class="list-inline-item">
+            <a class="text-center" href="mailto:hannahhatherell@gmail.com" target="_blank">
+                <i class="fas fa-envelope"></i>
+              </a>
+          </li>
+        </ul>
+        <small>©2024 Built by Hannah Hatherell | Hosted on Github <i class="fab fa-github"></i></small>
+      </div>
+    </footer>
+  </section>
 
   <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
   <div class="scroll-to-top d-lg-none position-fixed ">
