--- a/canopy.html
+++ b/canopy.html
@@ -20,7 +20,8 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100;9..40,200;9..40,300;9..40,400;9..40,500;9..40,600;9..40,700;9..40,800;9..40,900&family=Source+Sans+3:wght@300;400;600&family=Work+Sans:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100;9..40,200;9..40,300;9..40,400;9..40,500;9..40,600;9..40,700;9..40,800;9..40,900&family=Source+Sans+3:wght@300;400;600&family=Work+Sans:wght@100;200;300;400;500;600&display=swap"
+    rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
 
@@ -39,7 +40,7 @@
   <nav class="navbar navbar-expand-lg fixed-top text-uppercase" id="mainNav">
     <div class="container">
       <!--<a href="index.html"><img src="img/logo.svg"></a>-->
-      <a class="navbar-brand js-scroll-trigger pl-3" href="index.html" style="font-weight: 800; letter-spacing: 1px; font-size: 18px;">Hannah Hatherell</a>
+      <a class="navbar-brand js-scroll-trigger" href="index.html" style="font-weight: 800; letter-spacing: 1px; font-size: 18px;">Hannah Hatherell</a>
       <button class="navbar-toggler navbar-toggler-right text-uppercase text-primary" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <i class="fa fa-bars"></i>
       </button>
@@ -54,10 +55,10 @@
             <div class="dropdown-menu nav-item" aria-labelledby="dropdownMenuLink">
               <a class="dropdown-item nav-item" href="euna.html">Euna Solutions</a>
               <a class="dropdown-item nav-item" href="bonfire.html">Bonfire Interactive</a>
-              <a class="dropdown-item nav-item" href="questica.html">Questica</a>
+              <a class="dropdown-item nav-item" href="questica.html">Questica Budget</a>
               <a class="dropdown-item nav-item" href="nng.html">Nielsen Norman Group</a>
-              <a class="dropdown-item nav-item" href="masterpiece-vr.html">MasterpieceVR</a>
               <a class="dropdown-item nav-item" href="csp.html">Canadian Science Publishing</a>
+              <a class="dropdown-item nav-item" href="masterpiece-vr.html">MasterpieceVR</a>
               <a class="dropdown-item nav-item" href="cmg.html">Coyle Media Group</a>
               <a class="dropdown-item nav-item" href="canopy.html">Canopy Growth</a>
               <a class="dropdown-item nav-item" href="hhi.html">Half Halt Illustrations</a>
@@ -77,7 +78,8 @@
     </div>
   </nav>
 
-  <section class="mx-auto pt-5" style="background-color: #F7DFEC;">
+
+  <!--<section class="mx-auto pt-5" style="background-color: #F7DFEC;">
     <div class="col-sm-8 col-md-10 col-lg-8 mx-auto pt-5">
       <div class="row text-center">
         <div class="text-center mx-auto">
@@ -95,73 +97,97 @@
       </div>
       <div class="row">
         <div class="col-sm-12 col-md-8 col-xl-7">
-            <p class="gray" style="font-weight: 600;">OVERVIEW</p>
-            <p>As part of my role at Canopy Growth, I was responsible for photographing products and retouching images across corporate, recreational and medical brands. These assets were used on eCommerce sites across the country and had to meet strict Health Canada requirements. I contributed to many design projects at Canopy, one example was creating iconography for their medical brand, Spectrum Therapeutics.</p>
-          </div>
-          <div class="col-sm-12 col-md-4 col-xl-4">
-            <p class="gray" style="font-weight: 600;">ROLE</p>
-            <span style="font-size: 13px;">
+          <p class="gray" style="font-weight: 600;">OVERVIEW</p>
+          <p>As part of my role at Canopy Growth, I was responsible for photographing products and retouching images across corporate, recreational and medical brands. These assets were used on eCommerce sites across the country and had to meet strict Health Canada requirements. I contributed to many design projects at Canopy, one example was creating iconography for their medical brand, Spectrum Therapeutics.</p>
+        </div>
+        <div class="col-sm-12 col-md-4 col-xl-4">
+          <p class="gray" style="font-weight: 600;">ROLE</p>
+          <span style="font-size: 13px;">
             <p class="font-weight-bold mb-2">Production Designer</p>
             <p>Photo Retouching, Visual Design, Photography</p>
           </span>
-          </div>
         </div>
       </div>
-    </section>
-
-    <section class="pt-3 pb-5" style="background-color: #FEF7FA;">
-      <div class="container center">
-        <div class="row pt-4 pb-2">
-            <div class="col-xs-12 col-sm-5 col-md-5 col-xl-5">
-              <img class="img-fluid" src="img/canopy/spc.png">
-            </div>
-            <div class="col-xs-12 col-sm-7 col-md-7 col-xl-7">
-                <img class="img-fluid" src="img/canopy/cp-4.png">
-              </div>
-          </div>
-        </div>
-      </section>
-
-          <section class="pt-5 pb-0">
-            <div class="container">
-              <p class="font-weight-bold text-center">More Projects</p>
-              <div class="row pt-4 pb-2">
-                <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
-                  <a href="cmg.html"><img class="img-fluid project" src="img/cmg.png"></a>
-                </div>
-                <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
-                    <a href="hhi.html"><img class="img-fluid project" src="img/hhi.png"></a>
-                  </div>
-                </div>
-            </div>
-            </div>
-            </section>
+    </div>
+  </section>-->
 
 
+  <section class="pt-5 mt-3">
+    <div class="container center pb-4 mt-5">
+      <div class="pb-2">
+        <h2 style="font-size: 20px; font-weight: 600">Canopy Growth Corporation</h2>
+      </div>
+      <div>
+        <p>eCommerce Photography & Medical Iconography</p>
+        <p>As part of my role at Canopy Growth, I was responsible for photographing products and retouching images across corporate, recreational and medical brands. These assets were used on eCommerce sites across the country and had to meet strict Health Canada requirements. I contributed to many design projects at Canopy, one example was creating iconography for their medical brand, Spectrum Therapeutics.</p>
+
+      </div>
+    </div>
+  </section>
+
+  <section class="pt-3 pb-5" style="background-color: #FEF7FA;">
+    <div class="container center pt-5">
+        <img class="img-fluid" src="img/canopy/spc.png">
+        <img class="img-fluid" src="img/canopy/cp-4.png">
+        <img class="img-fluid" src="img/canopy/canopy.png">
+    </div>
+  </section>
+
+  <section class="pb-4 pt-5">
+    <div class="container center">
+      <ul class="scope-list">
+        <li>Preflighting</li>
+        <li>Photography</li>
+        <li>Photo Retouching</li>
+        <li>Iconography</li>
+        <li>Rush</li>
+      </ul>
+  </section>
 
 
-  <footer id="connect" class="footer center text-center pb-3" id="footer">
+  <section class="pb-3 pt-3">
     <div class="container">
-      <h5 class="font-weight-bold mb-3">Let's Connect</h5>
-        <p>Get in touch for opportunities or just to say hi! 👋</p>
-          <ul class="list-inline mb-3">
-            <li class="list-inline-item">
-              <a class="btn btn-gray text-center rounded-circle" href="https://www.linkedin.com/in/hannahhatherell/" target="_blank">
-                  <i class="fab fa-linkedin-in"></i>
-                </a>
-            </li>
-            <li class="list-inline-item">
-              <a class="btn btn-gray text-center rounded-circle" href="mailto:hannahhatherell@gmail.com" target="_blank">
-                  <i class="fas fa-envelope"></i>
-                </a>
-            </li>
-          </ul>
-  </footer>
+      <div class="row pt-4 pb-2">
+        <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
+          <div class="pb-4">
+            <a href="cmg.html"><img class="img-fluid project" src="img/cmg-1.png"></a>
+          </div>
+          <p class="project-sub">Magazines. Design. Process.</p>
+          <h5 class="project-title">Coyle Media Group</h5>
+        </div>
+        <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
+          <div class="pb-4">
+            <a href="hhi.html"><img class="img-fluid project hhi-border" src="img/hhi-1.png"></a>
+          </div>
+          <p class="project-sub">Illustration. Branding. Passion Project.</p>
+          <h5 class="project-title">Half Halt Illustrations</h5>
+        </div>
+      </div>
+    </div>
+  </section>
 
-  <div class="copyright py-4 text-center" <div class="container pt-1">
-    <small>©2024 Built by Hannah Hatherell | Hosted on Github <i class="fab fa-github"></i></small>
-  </div>
-  </div>
+  <section style="background-color: #f8f9fa;" class="pt-5">
+    <footer id="connect" class="center text-center pb-3" id="footer">
+      <div class="container">
+        <ul class="list-inline">
+          <li class="list-inline-item">
+            <p style="color: #868e96;" class="font-weight-bold list-inline">Let's Connect > </p>
+          </li>
+          <li class="list-inline-item">
+            <a class="text-center connect" href="https://www.linkedin.com/in/hannahhatherell/" target="_blank">
+                <i class="fab fa-linkedin-in"></i>
+              </a>
+          </li>
+          <li class="list-inline-item">
+            <a class="text-center" href="mailto:hannahhatherell@gmail.com" target="_blank">
+                <i class="fas fa-envelope"></i>
+              </a>
+          </li>
+        </ul>
+        <small>©2024 Built by Hannah Hatherell | Hosted on Github <i class="fab fa-github"></i></small>
+      </div>
+    </footer>
+  </section>
 
   <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
   <div class="scroll-to-top d-lg-none position-fixed ">
