--- a/cmg.html
+++ b/cmg.html
@@ -20,7 +20,8 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100;9..40,200;9..40,300;9..40,400;9..40,500;9..40,600;9..40,700;9..40,800;9..40,900&family=Source+Sans+3:wght@300;400;600&family=Work+Sans:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100;9..40,200;9..40,300;9..40,400;9..40,500;9..40,600;9..40,700;9..40,800;9..40,900&family=Source+Sans+3:wght@300;400;600&family=Work+Sans:wght@100;200;300;400;500;600&display=swap"
+    rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
 
@@ -39,7 +40,7 @@
   <nav class="navbar navbar-expand-lg fixed-top text-uppercase" id="mainNav">
     <div class="container">
       <!--<a href="index.html"><img src="img/logo.svg"></a>-->
-      <a class="navbar-brand js-scroll-trigger pl-3" href="index.html" style="font-weight: 800; letter-spacing: 1px; font-size: 18px;">Hannah Hatherell</a>
+      <a class="navbar-brand js-scroll-trigger" href="index.html" style="font-weight: 800; letter-spacing: 1px; font-size: 18px;">Hannah Hatherell</a>
       <button class="navbar-toggler navbar-toggler-right text-uppercase text-primary" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <i class="fa fa-bars"></i>
       </button>
@@ -54,10 +55,10 @@
             <div class="dropdown-menu nav-item" aria-labelledby="dropdownMenuLink">
               <a class="dropdown-item nav-item" href="euna.html">Euna Solutions</a>
               <a class="dropdown-item nav-item" href="bonfire.html">Bonfire Interactive</a>
-              <a class="dropdown-item nav-item" href="questica.html">Questica</a>
+              <a class="dropdown-item nav-item" href="questica.html">Questica Budget</a>
               <a class="dropdown-item nav-item" href="nng.html">Nielsen Norman Group</a>
-              <a class="dropdown-item nav-item" href="masterpiece-vr.html">MasterpieceVR</a>
               <a class="dropdown-item nav-item" href="csp.html">Canadian Science Publishing</a>
+              <a class="dropdown-item nav-item" href="masterpiece-vr.html">MasterpieceVR</a>
               <a class="dropdown-item nav-item" href="cmg.html">Coyle Media Group</a>
               <a class="dropdown-item nav-item" href="canopy.html">Canopy Growth</a>
               <a class="dropdown-item nav-item" href="hhi.html">Half Halt Illustrations</a>
@@ -77,179 +78,186 @@
     </div>
   </nav>
 
-  <section class="mx-auto pt-5 bg-grn">
-    <div class="col-sm-8 col-md-10 col-lg-8 mx-auto pt-5">
-      <div class="row text-center">
+  <section class="pt-5 mt-3">
+    <div class="container center pb-4 mt-5">
+      <div class="pb-2">
+        <h2 style="font-size: 20px; font-weight: 600">Coyle Media Group</h2>
+      </div>
+      <div>
+        <p>When I joined the team at Coyle Media Group (CMG), I was joining a start-up even though they had been in the publishing industry for 17 years. Instead of outsourcing to a third party, CMG was now bringing magazine design in-house and launching digital initiatives to bring their publications up to the speed of the modern publishing world.</p>
+        </ul>
+      </div>
+    </div>
+  </section>
+
+  <section class="mx-auto">
+    <div class="col-sm-6 mx-auto pb-0">
         <div class="text-center mx-auto">
-          <img class="img-fluid" src="img/vis-1.png" alt="">
+          <img class="img-fluid" src="img/cmg/luxe-spread-2.png" alt="">
+        </div>
+        <div class="text-center mx-auto">
+          <img class="img-fluid" src="img/cmg/luxe-spread.png" alt="">
+        </div>
+    </div>
+  </section>
+
+
+  <section>
+    <div class="container pb-5">
+      <div class="row center">
+        <!-- Phone -->
+        <div class="container">
+          <div class="row text-center cards">
+            <!--Phone & Tablet-->
+            <div class="col-md-6">
+              <a class="d-block mx-auto mb-2" href="https://console.virtualpaper.com/luxe/luxe-fall-2019/" target="_blank">
+                              <img class="img-fluid project" src="img/cmg/luxe-spread-2.png" alt="">
+                              <p class="pt-2 text-center caption">Luxe Fall 2019</p>
+                            </a>
+            </div>
+            <div class="col-md-6">
+              <a class="d-block mx-auto mb-2" href="https://console.virtualpaper.com/luxe/luxe-spring-summer-2019/" target="_blank">
+                              <img class="img-fluid project cover-open" src="img/cmg/luxe-spread.png" alt="">
+                              <p class="pt-2 text-center caption">Luxe Spring 2019</p>
+                            </a>
+            </div>
+          </div>
+
+
+          <!-- Desktop -->
+          <div class="row pt-5 mx-auto">
+            <p class="pt-2">Between <em>Fifty-Five Plus, Ottawa Wedding and Luxe Ottawa, Luxe</em> offered the most creative freedom as a designer. Check out the issues below to see my work on <em>Luxe</em>.</p>
+            <div class="col-lg-6 cards-desktop mx-auto">
+              <a class="d-block mx-auto" href="https://console.virtualpaper.com/luxe/luxe-fall-2019/" target="_blank">
+                <div class="img-fluid luxe-card-2"></div></a>
+              <div class="text-center">
+                <a href="http://info.cdnsciencepub.com/journals-catalogue" target="_blank"><button type="button" class="btn btn-primary font-weight-light">View <em>Luxe</em> Fall 2019</button></a>
+              </div>
+            </div>
+            <div class="col-lg-6 cards-desktop mx-auto">
+              <a class="d-block mx-auto" href="https://console.virtualpaper.com/luxe/luxe-spring-summer-2019/" target="_blank">
+                <div class="img-fluid luxe-card"></div>
+              </a>
+              <div class="text-center">
+                <a href="http://info.cdnsciencepub.com/journals-catalogue" target="_blank"><button type="button" class="btn btn-primary font-weight-light">View <em>Luxe</em> Spring 2019</button></a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </section>
 
 
+  <section class="pt-3">
+    <div class="container center">
+      <h2 style="font-size: 20px; font-weight: 600">Insights and Outcomes</h2>
 
-      <section class="pt-5 pb-5">
-        <div class="container center">
-          <div class="pb-2">
-            <h2 class="pb-0 mb-2" style="font-size: 36px;">Coyle Media Group</h2>
-            <p style="font-size: 14px; font-weight: 400;">End-to-end Visual Design | Publications</p>
-          </div>
-          <div class="row">
-            <div class="col-sm-12 col-md-8 col-xl-7">
-                <p class="gray" style="font-weight: 600;">OVERVIEW</p>
-                <p>When I joined the team at Coyle Media Group (CMG), I was joining a start-up even though they had been in the publishing industry for 17 years. Instead of outsourcing to a third party, CMG was now bringing magazine design in-house and launching digital initiatives to bring their publications up to the speed of the modern publishing world.</p>
-              </div>
-              <div class="col-sm-12 col-md-4 col-xl-4">
-                <p class="gray" style="font-weight: 600;">ROLE</p>
-                <span style="font-size: 13px;">
-                <p class="font-weight-bold mb-2">Lead Graphic Designer</p>
-                <p>User Research, Visual Design, Front-end Web Design, Branding</p>
-              </span>
-              </div>
-            </div>
-          </div>
-        </section>
-
-
-        <section class="bg-lt-grn">
-            <div class="container pb-5">
-              <div class="row center">
-                    <!-- Phone -->
-                    <div class="container">
-                      <div class="row text-center cards">
-                         <!--Phone & Tablet-->
-                        <div class="col-md-6">
-                          <a class="d-block mx-auto mb-2" href="https://console.virtualpaper.com/luxe/luxe-fall-2019/" target="_blank">
-                              <img class="img-fluid project" src="img/cmg/luxe-spread-2.png" alt="">
-                              <p class="pt-2 text-center caption">Luxe Fall 2019</p>
-                            </a>
-                        </div>
-                        <div class="col-md-6">
-                          <a class="d-block mx-auto mb-2" href="https://console.virtualpaper.com/luxe/luxe-spring-summer-2019/" target="_blank">
-                              <img class="img-fluid project cover-open" src="img/cmg/luxe-spread.png" alt="">
-                              <p class="pt-2 text-center caption">Luxe Spring 2019</p>
-                            </a>
-                        </div>
-                      </div>
-
-
-                      <!-- Desktop -->
-                      <div class="row pt-5 mx-auto">
-                        <p class="pt-2">Between <em>Fifty-Five Plus, Ottawa Wedding and Luxe Ottawa, Luxe</em> offered the most creative freedom as a designer. Check out the issues below to see the editorial design.</p>
-                        <div class="col-lg-6 cards-desktop mx-auto">
-                          <a class="d-block mx-auto" href="https://console.virtualpaper.com/luxe/luxe-fall-2019/" target="_blank">
-                            <div class="img-fluid luxe-card-2"></div>
-                            <p class="pt-2 text-center caption">Luxe Fall 2019</p>
-                          </a>
-                        </div>
-                        <div class="col-lg-6 cards-desktop mx-auto">
-                          <a class="d-block mx-auto" href="https://console.virtualpaper.com/luxe/luxe-spring-summer-2019/" target="_blank">
-                            <div class="img-fluid luxe-card"></div>
-                            <p class="pt-2 text-center caption">Luxe Spring 2019</p>
-                          </a>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </section>
-
-
-                <section class="pt-5">
-                  <div class="container center">
-                    <h4 class="pt-3 pb-3 mb-0 font-weight-bold">Insights & outcomes</h4>
-
-                    <div class="row">
-                      <div class="col-sm-12 col-md-8 col-lg-8">
-                        <p>My responsibility as the design lead was to spearhead the in-house design of the magazines and format this content for the magazine websites.</p>
-                        <p>I established a design system, a project timeline and a design process. I designed the layout and typography for all of the advertorial and editorial and approximately 40% of the advertising for each issue.</p>
-                        <p>The skills I learned at CMG would set me up for future implementation of processes and systems. I was able to accomplish these key achievements:</p>
-                        </div>
-                        <div class="col-sm-12 col-md-4 col-lg-4 pb-3">
-                          <img class="img-fluid" src="img/cmg/cmg-1.JPG">
-                        </div>
-                      </div>
-                    </div>
-                  </section>
-
-
-                  <section class="pt-2 pb-2">
-                    <div class="container">
-                      <div class="row center">
-                          <ul>
-                            <li class="pb-3"><span class="font-weight-bold">Implemented a design process and system.</span> There was no process or system in place for how the in-house magazine design would work as it had not been done before at CMG. This was key in establishing the structure of how I would conduct my work and how I would work with the magazine editors.</li>
-                            <li class="pb-3"><span class="font-weight-bold">Established project management.</span> To ensure we would meet each issue deadline, I built a structured project timeline complete with objectives, milestones and deadlines for each issue. Setting up these tools helped me stay on task and identify when I was falling behind.</li>
-                          </ul>
-                          </div>
-                        </div>
-                      </div>
-                    </section>
-
-      <div class="bb mb-5 pt-5"></div>
-
-      <section class="pb-0 pt-0">
-        <div class="container">
-          <p class="font-weight-bold text-center">More Projects</p>
-          <div class="row pt-4 pb-2">
-            <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
-              <a href="csp.html"><img class="img-fluid project" src="img/csp.png"></a>
-            </div>
-            <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
-                <a href="canopy.html"><img class="img-fluid project" src="img/canopy.png"></a>
-              </div>
-            </div>
+      <div class="row">
+        <div class="col-sm-12 col-md-8 col-lg-8">
+          <p>My responsibility as the design lead was to spearhead the in-house design of the magazines and format this content for the magazine websites.</p>
+          <p>I established a design system, a project timeline and a design process. I designed the layout and typography for all of the advertorial and editorial and approximately 40% of the advertising for each issue.</p>
+          <p>The skills I learned at CMG would set me up for future implementation of processes and systems. I was able to accomplish these key achievements:</p>
         </div>
+        <div class="col-sm-12 col-md-4 col-lg-4 pb-3">
+          <img class="img-fluid" src="img/cmg/cmg-1.JPG">
         </div>
-        </section>
+      </div>
+    </div>
+  </section>
 
-      <footer id="connect" class="footer center text-center pb-3" id="footer">
-        <div class="container">
-          <h5 class="font-weight-bold mb-3">Let's Connect</h5>
-            <p>Get in touch for opportunities or just to say hi! 👋</p>
-              <ul class="list-inline mb-3">
-                <li class="list-inline-item">
-                  <a class="btn btn-gray text-center rounded-circle" href="https://www.linkedin.com/in/hannahhatherell/" target="_blank">
-                      <i class="fab fa-linkedin-in"></i>
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                  <a class="btn btn-gray text-center rounded-circle" href="mailto:hannahhatherell@gmail.com" target="_blank">
-                      <i class="fas fa-envelope"></i>
-                    </a>
-                </li>
-              </ul>
-      </footer>
 
-      <div class="copyright py-4 text-center" <div class="container pt-1">
+  <section class="pt-2 pb-3">
+    <div class="container">
+      <div class="row center">
+        <ul>
+          <li class="pb-3"><span class="font-weight-bold">Implemented a design process and system.</span> There was no process or system in place for how the in-house magazine design would work as it had not been done before at CMG. This was key in establishing the structure
+            of how I would conduct my work and how I would work with the magazine editors.</li>
+          <li class="pb-3"><span class="font-weight-bold">Established project management.</span> To ensure we would meet each issue deadline, I built a structured project timeline complete with objectives, milestones and deadlines for each issue. Setting up these tools
+            helped me stay on task and identify when I was falling behind.</li>
+        </ul>
+      </div>
+    </div>
+    </div>
+  </section>
+
+  <section class="pb-4">
+    <div class="container center">
+      <ul class="scope-list">
+        <li>Magazine Design</li>
+        <li>Typesetting</li>
+        <li>Design Process</li>
+      </ul>
+  </section>
+
+  <section class="pb-3">
+    <div class="container">
+      <div class="row pt-4 pb-2">
+        <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
+          <div class="pb-4">
+            <a href="masterpiece-vr.html"><img class="img-fluid project" src="img/mpvr-1.png"></a>
+          </div>
+          <p class="project-sub">UX. UI. Virtual Reality.</p>
+          <h5 class="project-title">MasterpieceVR</h5>
+        </div>
+        <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
+          <div class="pb-4">
+            <a href="canopy.html"><img class="img-fluid project" src="img/canopy-1.png"></a>
+          </div>
+          <p class="project-sub">Photography. eCommerce. Production.</p>
+          <h5 class="project-title">Canopy Growth Corporation</h5>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section style="background-color: #f8f9fa;" class="pt-5">
+    <footer id="connect" class="center text-center pb-3" id="footer">
+      <div class="container">
+        <ul class="list-inline">
+          <li class="list-inline-item">
+            <p style="color: #868e96;" class="font-weight-bold list-inline">Let's Connect > </p>
+          </li>
+          <li class="list-inline-item">
+            <a class="text-center connect" href="https://www.linkedin.com/in/hannahhatherell/" target="_blank">
+                <i class="fab fa-linkedin-in"></i>
+              </a>
+          </li>
+          <li class="list-inline-item">
+            <a class="text-center" href="mailto:hannahhatherell@gmail.com" target="_blank">
+                <i class="fas fa-envelope"></i>
+              </a>
+          </li>
+        </ul>
         <small>©2024 Built by Hannah Hatherell | Hosted on Github <i class="fab fa-github"></i></small>
       </div>
-      </div>
+    </footer>
+  </section>
 
-<!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
-<div class="scroll-to-top d-lg-none position-fixed ">
-  <a class="js-scroll-trigger d-block text-center text-white rounded" href="#page-top">
+  <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
+  <div class="scroll-to-top d-lg-none position-fixed ">
+    <a class="js-scroll-trigger d-block text-center text-white rounded" href="#page-top">
       <i class="fa fa-chevron-up"></i>
     </a>
-</div>
+  </div>
 
 
 
 
-<!-- Bootstrap core JavaScript -->
-<script src="vendor/jquery/jquery.min.js"></script>
-<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-<!-- Plugin JavaScript -->
-<script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-<script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
+  <!-- Plugin JavaScript -->
+  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+  <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 
-<!-- Contact Form JavaScript -->
-<script src="js/jqBootstrapValidation.js"></script>
-<script src="js/contact_me.js"></script>
+  <!-- Contact Form JavaScript -->
+  <script src="js/jqBootstrapValidation.js"></script>
+  <script src="js/contact_me.js"></script>
 
-<!-- Custom scripts for this template -->
-<script src="js/freelancer.min.js"></script>
+  <!-- Custom scripts for this template -->
+  <script src="js/freelancer.min.js"></script>
 
 </body>
 
