--- a/hhi.html
+++ b/hhi.html
@@ -40,7 +40,7 @@
   <nav class="navbar navbar-expand-lg fixed-top text-uppercase" id="mainNav">
     <div class="container">
       <!--<a href="index.html"><img src="img/logo.svg"></a>-->
-      <a class="navbar-brand js-scroll-trigger pl-3" href="index.html" style="font-weight: 800; letter-spacing: 1px; font-size: 18px;">Hannah Hatherell</a>
+      <a class="navbar-brand js-scroll-trigger" href="index.html" style="font-weight: 800; letter-spacing: 1px; font-size: 18px;">Hannah Hatherell</a>
       <button class="navbar-toggler navbar-toggler-right text-uppercase text-primary" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <i class="fa fa-bars"></i>
       </button>
@@ -53,12 +53,12 @@
             <a class="dropdown-toggle pt-1 nav-link text-right" href="#" role="button" style="font-size: 14px" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Work</a>
 
             <div class="dropdown-menu nav-item" aria-labelledby="dropdownMenuLink">
-              <a class="dropdown-item nav-item" href="bonfire.html">Bonfire Interactive</a>
-              <a class="dropdown-item nav-item" href="questica.html">Questica</a>
               <a class="dropdown-item nav-item" href="euna.html">Euna Solutions</a>
+              <a class="dropdown-item nav-item" href="bonfire.html">Bonfire Interactive</a>
+              <a class="dropdown-item nav-item" href="questica.html">Questica Budget</a>
               <a class="dropdown-item nav-item" href="nng.html">Nielsen Norman Group</a>
-              <a class="dropdown-item nav-item" href="masterpiece-vr.html">MasterpieceVR</a>
               <a class="dropdown-item nav-item" href="csp.html">Canadian Science Publishing</a>
+              <a class="dropdown-item nav-item" href="masterpiece-vr.html">MasterpieceVR</a>
               <a class="dropdown-item nav-item" href="cmg.html">Coyle Media Group</a>
               <a class="dropdown-item nav-item" href="canopy.html">Canopy Growth</a>
               <a class="dropdown-item nav-item" href="hhi.html">Half Halt Illustrations</a>
@@ -79,7 +79,7 @@
   </nav>
 
 
-  <div class="container center pt-3">
+  <div class="center pt-3">
     <div class="row pt-5">
       <div class="col-sm-6">
         <div class="hhi pt-5 pb-2 pl-0 pr-0">
@@ -163,49 +163,59 @@
     </div>
   </div>
 
-  <div class="bb mb-5 pt-5"></div>
+  <section class="pb-4 pt-5">
+    <div class="container center">
+      <ul class="scope-list">
+        <li>Digital Artwork</li>
+        <li>Procreate (iPad)</li>
+        <li>Logo Design</li>
+        <li>Freelance</li>
+      </ul>
+  </section>
 
-
-  <section class="pb-0">
+  <section class="pb-3 pt-5">
     <div class="container">
-      <p class="font-weight-bold text-center">More Projects</p>
       <div class="row pt-4 pb-2">
         <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
-          <a href="canopy.html"><img class="img-fluid project" src="img/canopy.png"></a>
+          <div class="pb-4">
+            <a href="canopy.html"><img class="img-fluid project" src="img/canopy-1.png"></a>
+          </div>
+          <p class="project-sub">Photography. eCommerce. Production.</p>
+          <h5 class="project-title">Canopy Growth Corporation</h5>
         </div>
         <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
-          <a href="various.html"><img class="img-fluid project" src="img/various.png"></a>
+          <div class="pb-4">
+            <a href="various.html"><img class="img-fluid project" src="img/various-1.png"></a>
+          </div>
+          <p class="project-sub">Code. Design. Illustration.</p>
+          <h5 class="project-title">Various Works</h5>
         </div>
       </div>
     </div>
-    </div>
   </section>
 
-
-
-
-  <footer id="connect" class="footer center text-center pb-3" id="footer">
-    <div class="container">
-      <h5 class="font-weight-bold mb-3">Let's Connect</h5>
-      <p>Get in touch for opportunities or just to say hi! 👋</p>
-      <ul class="list-inline mb-3">
-        <li class="list-inline-item">
-          <a class="btn btn-gray text-center rounded-circle" href="https://www.linkedin.com/in/hannahhatherell/" target="_blank">
-                  <i class="fab fa-linkedin-in"></i>
-                </a>
-        </li>
-        <li class="list-inline-item">
-          <a class="btn btn-gray text-center rounded-circle" href="mailto:hannahhatherell@gmail.com" target="_blank">
-                  <i class="fas fa-envelope"></i>
-                </a>
-        </li>
-      </ul>
-  </footer>
-
-  <div class="copyright py-4 text-center" <div class="container pt-1">
-    <small>©2024 Built by Hannah Hatherell | Hosted on Github <i class="fab fa-github"></i></small>
-  </div>
-  </div>
+  <section style="background-color: #f8f9fa;" class="pt-5">
+    <footer id="connect" class="center text-center pb-3" id="footer">
+      <div class="container">
+        <ul class="list-inline">
+          <li class="list-inline-item">
+            <p style="color: #868e96;" class="font-weight-bold list-inline">Let's Connect > </p>
+          </li>
+          <li class="list-inline-item">
+            <a class="text-center connect" href="https://www.linkedin.com/in/hannahhatherell/" target="_blank">
+                <i class="fab fa-linkedin-in"></i>
+              </a>
+          </li>
+          <li class="list-inline-item">
+            <a class="text-center" href="mailto:hannahhatherell@gmail.com" target="_blank">
+                <i class="fas fa-envelope"></i>
+              </a>
+          </li>
+        </ul>
+        <small>©2024 Built by Hannah Hatherell | Hosted on Github <i class="fab fa-github"></i></small>
+      </div>
+    </footer>
+  </section>
 
   <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
   <div class="scroll-to-top d-lg-none position-fixed ">
