--- a/nng.html
+++ b/nng.html
@@ -40,7 +40,7 @@
   <nav class="navbar navbar-expand-lg fixed-top text-uppercase" id="mainNav">
     <div class="container">
       <!--<a href="index.html"><img src="img/logo.svg"></a>-->
-      <a class="navbar-brand js-scroll-trigger pl-3" href="index.html" style="font-weight: 800; letter-spacing: 1px; font-size: 18px;">Hannah Hatherell</a>
+      <a class="navbar-brand js-scroll-trigger" href="index.html" style="font-weight: 800; letter-spacing: 1px; font-size: 18px;">Hannah Hatherell</a>
       <button class="navbar-toggler navbar-toggler-right text-uppercase text-primary" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <i class="fa fa-bars"></i>
       </button>
@@ -55,10 +55,10 @@
             <div class="dropdown-menu nav-item" aria-labelledby="dropdownMenuLink">
               <a class="dropdown-item nav-item" href="euna.html">Euna Solutions</a>
               <a class="dropdown-item nav-item" href="bonfire.html">Bonfire Interactive</a>
-              <a class="dropdown-item nav-item" href="questica.html">Questica</a>
+              <a class="dropdown-item nav-item" href="questica.html">Questica Budget</a>
               <a class="dropdown-item nav-item" href="nng.html">Nielsen Norman Group</a>
-              <a class="dropdown-item nav-item" href="masterpiece-vr.html">MasterpieceVR</a>
               <a class="dropdown-item nav-item" href="csp.html">Canadian Science Publishing</a>
+              <a class="dropdown-item nav-item" href="masterpiece-vr.html">MasterpieceVR</a>
               <a class="dropdown-item nav-item" href="cmg.html">Coyle Media Group</a>
               <a class="dropdown-item nav-item" href="canopy.html">Canopy Growth</a>
               <a class="dropdown-item nav-item" href="hhi.html">Half Halt Illustrations</a>
@@ -78,7 +78,7 @@
     </div>
   </nav>
 
-  <section class="mx-auto pt-3" style="background-color: #A16F65;">
+  <!--<section class="mx-auto pt-3" style="background-color: #A16F65;">
     <div class="col-sm-8 col-md-10 col-lg-8 mx-auto pt-5">
       <div class="row text-center">
         <div class="text-center mx-auto">
@@ -87,6 +87,7 @@
       </div>
     </div>
   </section>
+
 
   <section class="pt-5">
     <div class="container center pb-5">
@@ -107,132 +108,123 @@
         </div>
       </div>
     </div>
-  </section>
+  </section>-->
 
-  <section class="pt-4 pb-5" style="background-color: #f8f9fa;">
-    <div class="container center">
+  <section class="pt-5 mt-3">
+    <div class="container center pb-4 mt-5">
+      <div class="pb-2">
+        <h2 style="font-size: 20px; font-weight: 600">Neilsen Norman Group</h2>
+      </div>
       <div>
-        <h4 class="pt-4 pb-4 mb-0 font-weight-bold">Goals</h4>
-        <ul>
-          <li>Establish a clear visual system that could theoretically be expanded and applied to a series of books.</li>
-          <li>Design something that feels modern, while still communicating professionalism. The design should stand out amongst other books on the shelf.</li>
-          <li>Consider the market. Understand what's out there (for example, O'Reilly and Rosenfeld), and leverage possible ways to visually differentiate NNg in a positive way.</li>
-        </ul>
-      </div>
-      <h4 class="pt-4 pb-4 mb-0 font-weight-bold">Visual system</h4>
-      <p>To establish a cohesive and effective visual system that could be applied to a series of books, I started by listing must-have system requirements. Each cover must adhere to the following:</p>
-      <ol>
-        <li>Follow the same basic design principles to communicate UX, Research and Design topics (gestalt, shape, colour, contrast, whitespace, balance and texture).</li>
-        <li>Use simple, geometric shapes. Designs cannot be too complex in order to remain efficient.</li>
-        <li>Be built on a rule of thirds grid.</li>
-        <li>Use a colour system.</li>
-      </ol>
-    </div>
-  </section>
-
-
-    <section class="pt-5 pb-5">
-      <div class="container center">
-        <div>
-          <h4 class="pt-3 pb-3 mb-0 font-weight-bold">Concept</h4>
-          <p>The objective was to develop something resonating with UX/UI Designers and Researchers, while remaining approachable for newcomers to the subject. Extensive research was conducted on various definitions and traits of User Experience, resulting in the creation of a keyword map. The chosen words were those deemed most relevant to the "What" and "Why" aspects of the topic, forming the basis for ideation. Initial concepts were sketched using Procreate on an iPad.</p>
-          <img class="img-fluid pb-3"src="img/nng/concept.png" alt="">
-          <p>Exploration began by examining various shapes to represent different aspects of UX. From left to right I focused on user journey symbols, five stages of the UX design process, and the ten heuristics. While these ideas provided a good starting point, they felt too specific. The approach was then shifted to lean more into the concept of HCI (human-computer interaction), incorporating the eye to represent the human element.</p>
+        <p>Book Cover Design + Visual System (Design Thinking Process)</p>
+        <div class="bb"></div>
+        <div class="mt-5">
+          <h3 style="font-size: 18px; font-weight: 600">Objectives</h3>
+          <ul>
+            <li>Establish a clear visual system that could be expanded and applied to a series of books.</li>
+            <li>Design something that feels modern, while still communicating professionalism.</li>
+            <li>Consider the market and leverage ways to visually differentiate NNg in a positive way.</li>
+          </ul>
         </div>
+        <h3 style="font-size: 18px; font-weight: 600" class="pt-4">Visual System Reqs</h3>
+        <ol>
+          <li>Follow the same basic design principles to communicate UX, Research and Design topics (gestalt, shape, colour, contrast, whitespace, balance and texture).</li>
+          <li>Use simple, geometric shapes. Designs cannot be too complex in order to remain efficient.</li>
+          <li>Be built on a rule of thirds grid.</li>
+          <li>Use a colour system.</li>
+        </ol>
+        <h3 style="font-size: 18px; font-weight: 600" class="pt-4">Conceptualizing</h3>
+        <p>The objective was to develop something resonating with UX/UI Designers and Researchers, while remaining approachable for newcomers to the subject. Extensive research was conducted on various definitions and traits of User Experience, resulting
+          in the creation of a keyword map. The chosen words were those deemed most relevant to the "What" and "Why" aspects of the topic, forming the basis for ideation. Initial concepts were sketched using Procreate on an iPad.</p>
+        <img class="img-fluid pb-3" src="img/nng/concept.png" alt="">
+        <p>Exploration began by examining various shapes to represent different aspects of UX. From left to right I focused on user journey symbols, five stages of the UX design process, and the ten heuristics. While these ideas provided a good starting
+          point, they felt too specific. The approach was then shifted to lean more into the concept of HCI (human-computer interaction), incorporating the eye to represent the human element.</p>
       </div>
-    </section>
 
-    <section class="pt-3 pb-5" style="background-color: #f8f9fa;">
-      <div class="container center">
-        <div>
-          <h4 class="pt-5 pb-3 mb-0 font-weight-bold">Colour</h4>
-          <p>Since this collection of books cover the topics of UX, Research and Design, I wanted to choose a colour system that would relate to those topics as a whole. I was immediately inspired by the Material Design Colour System. Each book cover could utilize a different palette that best connects to the corresponding book topic. Because these palettes were originally built for web and UI, I created a CMYK version as close as possible for print use. I specifically chose the indigo colour scheme to connect with the empathetic devotion that UX needs to create with the end user in order to be successful.</p>
-          <div class="container pt-0 center pt-2">
-            <div class="row pt-0">
+      <h3 style="font-size: 18px; font-weight: 600" class="pt-4">Colour</h3>
+      <p>Since this collection of books cover the topics of UX, Research and Design, I wanted to choose a colour system that would relate to those topics as a whole. I was immediately inspired by the Material Design Colour System. Each book cover could utilize
+        a different palette that best connects to the corresponding book topic. Because these palettes were originally built for web and UI, I created a CMYK version as close as possible for print use. I specifically chose the indigo colour scheme to
+        connect with the empathetic devotion that UX needs to create with the end user in order to be successful.</p>
+      <div class="container pt-0 center pt-2">
+        <div class="row pt-0">
           <div class="col-sm-6">
-            <p style="font-weight: 600;">CMYK</p>
-            <img class="img-fluid pb-3"src="img/nng/cmyk.png" alt="">
+            <p style="font-weight: 600; font-size: 12px;">CMYK</p>
+            <img class="img-fluid pb-3" src="img/nng/cmyk.png" alt="">
             <p class="caption">This is the CMYK palette used in the artwork.</p>
           </div>
           <div class="col-sm-6">
-            <p style="font-weight: 600;">RGB</p>
-            <img class="img-fluid pb-3"src="img/nng/rgb.png" alt="">
+            <p style="font-weight: 600; font-size: 12px;">RGB</p>
+            <img class="img-fluid pb-3" src="img/nng/rgb.png" alt="">
             <p class="caption">If web versions were an option for this use case, I would explore these values.</p>
           </div>
         </div>
       </div>
-      <h4 class="pt-3 pb-3 mb-0 font-weight-bold">Type</h4>
-      <p>To remain cohesive with the simplicity of the visual system, the chosen typeface needed to be clean, modern and easy to read. Continuing with the theme of HCI, I thought to select a typeface that reminds the viewer of browsing through web or using computer applications. I chose to experiment with a modern Sans Serif named <em>PP Neue Montreal</em> for both headings and body copy. However, if I had more time for the project, I would opt for an alternative typeface for the body copy that is easier to consume for long-form printed publications.</p>
-        </div>
-      </div>
-    </section>
-
-    <section class="pt-3 pb-4">
-      <div class="container center">
-        <div>
-
-        </div>
-      </div>
-    </section>
-
-
-  <section class="pb-3 pt-4">
-    <div class="container center">
-      <div class="pb-5">
-        <h4 class="pb-3 mb-0 font-weight-bold">Final Design</h4>
-        <p>The human eye serves as one of our primary motors for perceiving the world around us. This illustration invokes a pleasant emotion, which is experienced by an end-user when interacting with computer and web applications. The incorporation of layers and texture not only adds visual interest but also suggests the depth and immersion inherent in this interaction.</p>
-        <img class="img-fluid pb-3"src="img/nng/final.png" alt="">
-        <img class="img-fluid pt-5 pb-3"src="img/nng/spread.png" alt="">
-        <h5 class="pb-2">Inside Spread Example</h5>
-        <p>The spread is clean, simple and modern, utilizing hierarchy and a single column layout. Cohesive section covers indicate new chapter breaks. These colours pull from the same indigo colour scheme used in the cover design.</p>
-      </div>
+      <h3 style="font-size: 18px; font-weight: 600" class="pt-4">Type</h3>
+      <p>To remain cohesive with the simplicity of the visual system, the chosen typeface needed to be clean, modern and easy to read. Continuing with the theme of HCI, I thought to select a typeface that reminds the viewer of browsing through web or using
+        computer applications. I chose to experiment with a modern Sans Serif named <em>PP Neue Montreal</em> for both headings and body copy. However, if I had more time for the project, I would opt for an alternative typeface for the body copy that
+        is easier to consume for long-form printed publications.</p>
+      <h3 style="font-size: 18px; font-weight: 600" class="pt-4">Final Design</h3>
+      <p>The human eye serves as one of our primary motors for perceiving the world around us. This illustration invokes a pleasant emotion, which is experienced by an end-user when interacting with computer and web applications. The incorporation of layers
+        and texture not only adds visual interest but also suggests the depth and immersion inherent in this interaction.</p>
+      <img class="img-fluid pb-3" src="img/nng/final.png" alt="">
+      <img class="img-fluid pt-5 pb-3" src="img/nng/spread.png" alt="">
+      <h3 style="font-size: 18px; font-weight: 600" class="pt-4">Inside Spread Example</h3>
+      <p>The spread is clean, simple and modern, utilizing hierarchy and a single column layout. Cohesive section covers indicate new chapter breaks. These colours pull from the same indigo colour scheme used in the cover design.</p>
+      <ul class="scope-list pt-4">
+        <li>Brainstorming</li>
+        <li>Design Thinking</li>
+        <li>Wordmapping</li>
+        <li>Illustration</li>
+        <li>Typesetting</li>
+      </ul>
     </div>
   </section>
 
-
-   <div class="bb mb-5 pt-0"></div>
-
-
-  <section class="pb-0 pt-5">
+  <section class="pb-3 pt-3">
     <div class="container">
-      <p class="font-weight-bold text-center">More Projects</p>
       <div class="row pt-4 pb-2">
         <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
-          <a href="questica.html"><img class="img-fluid project" src="img/questica.png"></a>
+          <div class="pb-4">
+            <a href="questica.html"><img class="img-fluid project" src="img/questica-1.png"></a>
+          </div>
+          <p class="project-sub">Campaign. Design. Postcards.</p>
+          <h5 class="project-title">Questica Budget</h5>
         </div>
         <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
-          <a href="masterpiece-vr.html"><img class="img-fluid project" src="img/mpvr.png"></a>
+          <div class="pb-4">
+            <a href="csp.html"><img class="img-fluid project" src="img/csp-1.png"></a>
+          </div>
+          <p class="project-sub">UX. Frontend. Illustration.</p>
+          <h5 class="project-title">Canadian Science Publishing</h5>
         </div>
       </div>
-    </div>
     </div>
   </section>
 
 
+  <section style="background-color: #f8f9fa;" class="pt-5">
+    <footer id="connect" class="center text-center pb-3" id="footer">
+      <div class="container">
+        <ul class="list-inline">
+          <li class="list-inline-item">
+            <p style="color: #868e96;" class="font-weight-bold list-inline">Let's Connect > </p>
+          </li>
+          <li class="list-inline-item">
+            <a class="text-center connect" href="https://www.linkedin.com/in/hannahhatherell/" target="_blank">
+                <i class="fab fa-linkedin-in"></i>
+              </a>
+          </li>
+          <li class="list-inline-item">
+            <a class="text-center" href="mailto:hannahhatherell@gmail.com" target="_blank">
+                <i class="fas fa-envelope"></i>
+              </a>
+          </li>
+        </ul>
+        <small>©2024 Built by Hannah Hatherell | Hosted on Github <i class="fab fa-github"></i></small>
+      </div>
+    </footer>
+  </section>
 
-
-  <footer id="connect" class="footer center text-center pb-3" id="footer">
-    <div class="container">
-      <h5 class="font-weight-bold mb-3">Let's Connect</h5>
-      <p>Get in touch for opportunities or just to say hi! 👋</p>
-      <ul class="list-inline mb-3">
-        <li class="list-inline-item">
-          <a class="btn btn-gray text-center rounded-circle" href="https://www.linkedin.com/in/hannahhatherell/" target="_blank">
-                  <i class="fab fa-linkedin-in"></i>
-                </a>
-        </li>
-        <li class="list-inline-item">
-          <a class="btn btn-gray text-center rounded-circle" href="mailto:hannahhatherell@gmail.com" target="_blank">
-                  <i class="fas fa-envelope"></i>
-                </a>
-        </li>
-      </ul>
-  </footer>
-
-  <div class="copyright py-4 text-center" <div class="container pt-1">
-    <small>©2024 Built by Hannah Hatherell | Hosted on Github <i class="fab fa-github"></i></small>
-  </div>
-  </div>
 
   <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
   <div class="scroll-to-top d-lg-none position-fixed ">
