--- a/questica.html
+++ b/questica.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta property="og:title" content="Questica, a Euna Solutions Brand" />
   <meta property="og:url" content="https://www.hannahhatherell.com/questica.html" />
-<meta property="og:image" content="https://www.hannahhatherell.com/questica.png" />
+  <meta property="og:image" content="https://www.hannahhatherell.com/questica.png" />
 
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 
@@ -20,7 +20,8 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100;9..40,200;9..40,300;9..40,400;9..40,500;9..40,600;9..40,700;9..40,800;9..40,900&family=Source+Sans+3:wght@300;400;600&family=Work+Sans:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100;9..40,200;9..40,300;9..40,400;9..40,500;9..40,600;9..40,700;9..40,800;9..40,900&family=Source+Sans+3:wght@300;400;600&family=Work+Sans:wght@100;200;300;400;500;600&display=swap"
+    rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
 
@@ -39,7 +40,7 @@
   <nav class="navbar navbar-expand-lg fixed-top text-uppercase" id="mainNav">
     <div class="container">
       <!--<a href="index.html"><img src="img/logo.svg"></a>-->
-      <a class="navbar-brand js-scroll-trigger pl-3" href="index.html" style="font-weight: 800; letter-spacing: 1px; font-size: 18px;">Hannah Hatherell</a>
+      <a class="navbar-brand js-scroll-trigger" href="index.html" style="font-weight: 800; letter-spacing: 1px; font-size: 18px;">Hannah Hatherell</a>
       <button class="navbar-toggler navbar-toggler-right text-uppercase text-primary" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <i class="fa fa-bars"></i>
       </button>
@@ -54,10 +55,10 @@
             <div class="dropdown-menu nav-item" aria-labelledby="dropdownMenuLink">
               <a class="dropdown-item nav-item" href="euna.html">Euna Solutions</a>
               <a class="dropdown-item nav-item" href="bonfire.html">Bonfire Interactive</a>
-              <a class="dropdown-item nav-item" href="questica.html">Questica</a>
+              <a class="dropdown-item nav-item" href="questica.html">Questica Budget</a>
               <a class="dropdown-item nav-item" href="nng.html">Nielsen Norman Group</a>
-              <a class="dropdown-item nav-item" href="masterpiece-vr.html">MasterpieceVR</a>
               <a class="dropdown-item nav-item" href="csp.html">Canadian Science Publishing</a>
+              <a class="dropdown-item nav-item" href="masterpiece-vr.html">MasterpieceVR</a>
               <a class="dropdown-item nav-item" href="cmg.html">Coyle Media Group</a>
               <a class="dropdown-item nav-item" href="canopy.html">Canopy Growth</a>
               <a class="dropdown-item nav-item" href="hhi.html">Half Halt Illustrations</a>
@@ -77,7 +78,97 @@
     </div>
   </nav>
 
-  <section class="mx-auto" style="background-color:#7F3477;">
+
+
+  <!--  <section class="pt-5">
+    <div class="container center pb-5">
+      <div class="pb-2">
+        <h2 class="pb-0 mb-2" style="font-size: 36px;">Questica, a Euna Solutions Brand</h2>
+        <p style="font-size: 14px; font-weight: 400;">Sales & Marketing ABM Campaign | Budgeting</p>
+      </div>
+      <div class="row">
+        <div class="col-sm-12 col-md-8 col-xl-8">
+          <p class="gray" style="font-weight: 600;">OVERVIEW</p>
+          <p>The goal of this ABM campaign was to promote a new feature called "Budget Book Studio" in our Budget product line. This focused approach was used to target specific prospects, in this case we filtered by State/Province, and then convert them
+            into sales. We utilized MailJoy for the direct mail marketing portion and designed 9 state/province specific postcards.<br><br>Questica (now Euna Budget) is a web-based budgeting software that is offered as both a hosted or SaaS model.</p>
+        </div>
+        <div class="col-sm-12 col-md-4 col-xl-4">
+          <p class="gray" style="font-weight: 600;">ROLE</p>
+          <span style="font-size: 13px;">
+              <p class="font-weight-bold mb-2">Graphic Designer & Developer</p>
+              <p>User Research, Graphic Design, Illustration, Visual Design, MailJoy</p>
+            </span>
+        </div>
+      </div>
+    </div>
+  </section>-->
+
+  <section class="pt-5 mt-3">
+    <div class="container center pb-4 mt-5">
+      <div class="pb-2">
+        <h2 style="font-size: 20px; font-weight: 600">Questica, a Euna Solutions Brand (Budgeting Software)</h2>
+      </div>
+      <div>
+        <p>The goal of this ABM campaign was to promote a new product feature called <span>Budget Book Studio</span> in Euna Solutions' Budget product line. This focused approach targeted prospects, in this case we filtered by State/Province, to attain new
+          leads. We utilized MailJoy for the direct mail marketing portion and designed 9 state/province specific postcards.</p>
+        <p style="font-weight: 600;">Design Parameters</p>
+        <ul>
+          <li class="pb-2"><span style="font-weight: 600;">Eye-catching.</span> Visually engage with the viewer, they'll want to hang this in their office.</li>
+          <li class="pb-2"><span style="font-weight: 600;">Memorable.</span> Design something on-brand, but break out of the core corporate mold.</li>
+          <li class="pb-2"><span style="font-weight: 600;">Print-ready.</span> The CMYK graphics should be sharp as a tack.</li>
+          <li class="pb-2"><span style="font-weight: 600;">Be familial.</span> All the postcards should look like they belong together.</li>
+        </ul>
+      </div>
+    </div>
+  </section>
+
+  <div class="container">
+    <div class="row pt-4">
+      <div class="col-sm-6 pb-3">
+        <img class="img-fluid" src="img/euna/questica-2.png">
+      </div>
+      <div class="col-sm-6 pb-3">
+        <img class="img-fluid" src="img/euna/questica/bc.png">
+      </div>
+      <div class="col-sm-6 pb-3">
+        <img class="img-fluid" src="img/euna/questica/on.png">
+      </div>
+      <div class="col-sm-6 pb-3">
+        <img class="img-fluid" src="img/euna/questica/oh.png">
+      </div>
+      <div class="col-sm-6 pb-3">
+        <img class="img-fluid" src="img/euna/questica/tx.png">
+      </div>
+      <div class="col-sm-6 pb-3">
+        <img class="img-fluid" src="img/euna/questica/ca.png">
+      </div>
+      <div class="col-sm-6 pb-3">
+        <img class="img-fluid" src="img/euna/questica/nc.png">
+      </div>
+      <div class="col-sm-6 pb-3">
+        <img class="img-fluid" src="img/euna/questica/mi.png">
+      </div>
+      <div class="col-sm-6 pb-3">
+        <img class="img-fluid" src="img/euna/questica/ny.png">
+      </div>
+      <div class="col-sm-6 pb-3">
+        <img class="img-fluid" src="img/euna/questica/fl.png">
+      </div>
+    </div>
+  </div>
+
+  <section class="pb-3 pt-5">
+    <div class="container center">
+      <ul class="scope-list">
+        <li>Illustration</li>
+        <li>Campaign Creative</li>
+        <li>Print Design</li>
+      </ul>
+  </section>
+
+
+
+  <!--  <section class="mx-auto" style="background-color:#7F3477;">
     <div class="col-sm-8 col-md-10 col-lg-8 mx-auto pt-5">
       <div class="row text-center">
         <div class="text-center mx-auto">
@@ -85,100 +176,68 @@
         </div>
       </div>
     </div>
+  </section>-->
+
+  <!--<section class="pt-1">
+    <div class="container center">
+      <div>
+        <h4 class="pb-3 mb-0 font-weight-bold">Results and takeaways</h4>
+        <p>As the campaign is launching in February 2024 and running for several weeks, I am currently unable to report on the performance metrics.</p>
+        <p>Some key takeaways from this project are: </p>
+        <ul>
+          <li class="pb-3"><span class="font-weight-bold">Don't be afraid to try push the design boundaries. </span>This was a great opportunity to push the brand guidelines while staying within our colour palette, and do something eye-catching that would receive immediate
+            attention.</li>
+          <li class="pb-3"><span class="font-weight-bold">Know your target audience.</span> Our target audience for this campaign LOVES fun design! A core-brand corporate postcard would not be as well received in this specific use case.</li>
+          <li class="pb-3"><span class="font-weight-bold">Less is more. </span>Keeping the design simple and cohesive across the board was key in letting the typography stand out.</li>
+        </ul>
+      </div>
+    </div>
+  </section>-->
+
+  <section class="pb-3 pt-3">
+    <div class="container">
+      <div class="row pt-4 pb-2">
+        <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
+          <div class="pb-4">
+            <a href="bonfire.html"><img class="img-fluid project" src="img/bonfire-1.png"></a>
+          </div>
+          <p class="project-sub">Campaign. Design. Marketing.</p>
+          <h5 class="project-title">Bonfire Interactive</h5>
+        </div>
+        <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
+          <div class="pb-4">
+            <a href="nng.html"><img class="img-fluid project" src="img/nng-1.png"></a>
+          </div>
+          <p class="project-sub">Book Cover. Visual System. Design.</p>
+          <h5 class="project-title">Nielsen Norman Group</h5>
+        </div>
+      </div>
+    </div>
   </section>
 
-    <section class="pt-5">
-      <div class="container center pb-5">
-        <div class="pb-2">
-          <h2 class="pb-0 mb-2" style="font-size: 36px;">Questica, a Euna Solutions Brand</h2>
-          <p style="font-size: 14px; font-weight: 400;">Sales & Marketing ABM Campaign | Budgeting</p>
-        </div>
-        <div class="row">
-          <div class="col-sm-12 col-md-8 col-xl-8">
-              <p class="gray" style="font-weight: 600;">OVERVIEW</p>
-              <p>The goal of this ABM campaign was to promote a new feature called "Budget Book Studio" in our Budget product line. This focused approach was used to target specific prospects, in this case we filtered by State/Province, and then convert them into sales. We utilized MailJoy for the direct mail marketing portion and designed 9 state/province specific postcards.<br><br>Questica (now Euna Budget) is a web-based budgeting software that is offered as both a hosted or SaaS model.</p>
-            </div>
-            <div class="col-sm-12 col-md-4 col-xl-4">
-              <p class="gray" style="font-weight: 600;">ROLE</p>
-              <span style="font-size: 13px;">
-              <p class="font-weight-bold mb-2">Graphic Designer & Developer</p>
-              <p>User Research, Graphic Design, Illustration, Visual Design, MailJoy</p>
-            </span>
-            </div>
-          </div>
-        </div>
-      </section>
 
-        <section class="pt-1 pb-5">
-          <div class="container center">
-            <div class="pb-2">
-              <div class="text-center pt-3">
-                <img class="img-fluid" src="img/euna/questica-2.png">
-              </div>
-              <p class="pt-2 text-center caption">A front and back example of an individual postcard.</p>
-            </div>
-          </div>
-          </section>
-
-
-        <section class="pt-1">
-          <div class="container center">
-            <div>
-              <h4 class="pb-3 mb-0 font-weight-bold">Results and takeaways</h4>
-              <p>As the campaign is launching in February 2024 and running for several weeks, I am currently unable to report on the performance metrics.</p>
-              <p>Some key takeaways from this project are: </p>
-              <ul>
-                <li class="pb-3"><span class="font-weight-bold">Don't be afraid to try push the design boundaries. </span>This was a great opportunity to push the brand guidelines while staying within our colour palette, and do something eye-catching that would receive immediate attention.</li>
-                <li class="pb-3"><span class="font-weight-bold">Know your target audience.</span> Our target audience for this campaign LOVES fun design! A core-brand corporate postcard would not be as well received in this specific use case.</li>
-                <li class="pb-3"><span class="font-weight-bold">Less is more. </span>Keeping the design simple and cohesive across the board was key in letting the typography stand out.</li>
-              </ul>
-            </div>
-          </div>
-          </section>
-
-          <div class="bb mb-5 pt-5"></div>
-
-
-          <section class="pb-0">
-            <div class="container">
-              <p class="font-weight-bold text-center">More Projects</p>
-              <div class="row pt-4 pb-2">
-                <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
-                  <a href="nng.html"><img class="img-fluid project" src="img/nng.png"></a>
-                </div>
-                <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
-                    <a href="masterpiece-vr.html"><img class="img-fluid project" src="img/mpvr.png"></a>
-                  </div>
-                </div>
-            </div>
-            </div>
-            </section>
-
-
-
-
-  <footer id="connect" class="footer center text-center pb-3" id="footer">
-    <div class="container">
-      <h5 class="font-weight-bold mb-3">Let's Connect</h5>
-        <p>Get in touch for opportunities or just to say hi! 👋</p>
-          <ul class="list-inline mb-3">
-            <li class="list-inline-item">
-              <a class="btn btn-gray text-center rounded-circle" href="https://www.linkedin.com/in/hannahhatherell/" target="_blank">
-                  <i class="fab fa-linkedin-in"></i>
-                </a>
-            </li>
-            <li class="list-inline-item">
-              <a class="btn btn-gray text-center rounded-circle" href="mailto:hannahhatherell@gmail.com" target="_blank">
-                  <i class="fas fa-envelope"></i>
-                </a>
-            </li>
-          </ul>
-  </footer>
-
-  <div class="copyright py-4 text-center" <div class="container pt-1">
-    <small>©2024 Built by Hannah Hatherell | Hosted on Github <i class="fab fa-github"></i></small>
-  </div>
-  </div>
+  <section style="background-color: #f8f9fa;" class="pt-5">
+    <footer id="connect" class="center text-center pb-3" id="footer">
+      <div class="container">
+        <ul class="list-inline">
+          <li class="list-inline-item">
+            <p style="color: #868e96;" class="font-weight-bold list-inline">Let's Connect > </p>
+          </li>
+          <li class="list-inline-item">
+            <a class="text-center connect" href="https://www.linkedin.com/in/hannahhatherell/" target="_blank">
+                        <i class="fab fa-linkedin-in"></i>
+                      </a>
+          </li>
+          <li class="list-inline-item">
+            <a class="text-center" href="mailto:hannahhatherell@gmail.com" target="_blank">
+                        <i class="fas fa-envelope"></i>
+                      </a>
+          </li>
+        </ul>
+        <small>©2024 Built by Hannah Hatherell | Hosted on Github <i class="fab fa-github"></i></small>
+      </div>
+    </footer>
+  </section>
 
   <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
   <div class="scroll-to-top d-lg-none position-fixed ">
