--- a/various.html
+++ b/various.html
@@ -40,7 +40,7 @@
   <nav class="navbar navbar-expand-lg fixed-top text-uppercase" id="mainNav">
     <div class="container">
       <!--<a href="index.html"><img src="img/logo.svg"></a>-->
-      <a class="navbar-brand js-scroll-trigger pl-3" href="index.html" style="font-weight: 800; letter-spacing: 1px; font-size: 18px;">Hannah Hatherell</a>
+      <a class="navbar-brand js-scroll-trigger" href="index.html" style="font-weight: 800; letter-spacing: 1px; font-size: 18px;">Hannah Hatherell</a>
       <button class="navbar-toggler navbar-toggler-right text-uppercase text-primary" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <i class="fa fa-bars"></i>
       </button>
@@ -55,10 +55,10 @@
             <div class="dropdown-menu nav-item" aria-labelledby="dropdownMenuLink">
               <a class="dropdown-item nav-item" href="euna.html">Euna Solutions</a>
               <a class="dropdown-item nav-item" href="bonfire.html">Bonfire Interactive</a>
-              <a class="dropdown-item nav-item" href="questica.html">Questica</a>
+              <a class="dropdown-item nav-item" href="questica.html">Questica Budget</a>
               <a class="dropdown-item nav-item" href="nng.html">Nielsen Norman Group</a>
-              <a class="dropdown-item nav-item" href="masterpiece-vr.html">MasterpieceVR</a>
               <a class="dropdown-item nav-item" href="csp.html">Canadian Science Publishing</a>
+              <a class="dropdown-item nav-item" href="masterpiece-vr.html">MasterpieceVR</a>
               <a class="dropdown-item nav-item" href="cmg.html">Coyle Media Group</a>
               <a class="dropdown-item nav-item" href="canopy.html">Canopy Growth</a>
               <a class="dropdown-item nav-item" href="hhi.html">Half Halt Illustrations</a>
@@ -78,15 +78,15 @@
     </div>
   </nav>
 
-  <div class="text-center pt-5">
-    <h1 class="pt-5 mt-3" style="font-size: 48px; font-weight: 600;">Various Works</h1>
+  <div class="text-center pt-5 mt-5">
+    <h1 style="font-size: 96px; font-weight: 600" class="pt-3">Various Works</h2>
   </div>
 
 <div class="bb pt-2 w-25"></div>
 
-  <section class="mx-auto pt-5 mt-2 pb-5">
+  <section class="mx-auto pt-3 mt-2 pb-5">
             <div class="text-center">
-              <h1 class="pb-0 mb-0">CSS Animations</h1>
+              <h2 style="font-size: 28px; font-weight: 600" class="pt-3">CSS Animations</h2>
             </div>
 
     <div class="col-lg-8 mx-auto pt-4">
@@ -111,8 +111,7 @@
     <!--<section class="banner-harper text-center"></section>-->
 
     <div class="text-center pt-5">
-      <h1 class="pb-0 mb-0">Red Panda</h1>
-      <p style="font-size: 14px; font-weight: 400;">Inspired by Charley Harper</p>
+      <h2 style="font-size: 28px; font-weight: 600" class="pt-3">Red Panda</h2>
     </div>
   </div>
 
@@ -142,8 +141,7 @@
 
 
       <div class="text-center pt-5">
-        <h1 class="pb-0 mb-0">Marvel & DC Characters</h1>
-        <p style="font-size: 14px; font-weight: 400;">Inspired by my love of Marvel</p>
+        <h2 style="font-size: 28px; font-weight: 600" class="pt-3">Marvel & DC Characters</h2>
       </div>
 
         <section>
@@ -177,8 +175,7 @@
     <div class="bb pt-2 pb-3"></div>
 
     <div class="text-center pt-5">
-      <h1 class="pb-0 mb-0">Blue Ringed Octopus Illustration</h1>
-      <p style="font-size: 14px; font-weight: 400;">Inspired by David Attenborough</p>
+      <h2 style="font-size: 28px; font-weight: 600" class="pt-3">Blue Ringed Octopus Illustration</h2>
     </div>
 
     <section class="mx-auto">
@@ -195,93 +192,48 @@
             </video>
       </section>
 
-      <div class="bb pt-5 pb-3"></div>
-  <div class="text-center pt-5">
-    <h1 class="pb-0 mb-0 pr-3 pl-3">Questica & eCivis Advertising Illustrations</h1>
-    <p style="font-size: 14px; font-weight: 400;">From part of my work at Euna Solutions</p>
-  </div>
-
-
-  <div class="container pt-0 pb-5 mb-5 center">
-    <div class="row pt-0">
-      <div class="col-sm-6 pt-2">
-        <img class="img-fluid" src="img/euna/ecivis-ad.png">
-      </div>
-      <div class="col-sm-6 pt-2">
-        <img class="img-fluid" src="img/euna/questica-ad.png">
-      </div>
-    </div>
-  </div>
-
-
-<div class="bb mb-5 pt-5"></div>
-
-  <section class="pb-0">
-    <div class="container">
-      <p class="font-weight-bold text-center">More Projects</p>
-      <div class="row pt-4 pb-2">
-        <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
-          <a href="hhi.html"><img class="img-fluid project" src="img/hhi.png"></a>
+      <section class="pb-3 pt-5">
+        <div class="container">
+          <div class="row pt-4 pb-2">
+            <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
+              <div class="pb-4">
+                <a href="euna.html"><img class="img-fluid project" src="img/euna-2.png"></a>
+              </div>
+              <p class="project-sub">Design. Marketing. Brand.</p>
+              <h5 class="project-title">Euna Solutions</h5>
+            </div>
+            <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
+              <div class="pb-4">
+                <a href="bonfire.html"><img class="img-fluid project" src="img/bonfire-1.png"></a>
+              </div>
+              <p class="project-sub">Campaign. Design. Marketing.</p>
+              <h5 class="project-title">Bonfire Interactive</h5>
+            </div>
+          </div>
         </div>
-        <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
-          <a href="bonfire.html"><img class="img-fluid project" src="img/bonfire.png"></a>
-        </div>
-      </div>
-    </div>
-    </div>
-  </section>
+      </section>
 
-
-
-
-  <footer id="connect" class="footer center text-center pb-3" id="footer">
-    <div class="container">
-      <h5 class="font-weight-bold mb-3">Let's Connect</h5>
-      <p>Get in touch for opportunities or just to say hi! 👋</p>
-      <ul class="list-inline mb-3">
-        <li class="list-inline-item">
-          <a class="btn btn-gray text-center rounded-circle" href="https://www.linkedin.com/in/hannahhatherell/" target="_blank">
-                  <i class="fab fa-linkedin-in"></i>
-                </a>
-        </li>
-        <li class="list-inline-item">
-          <a class="btn btn-gray text-center rounded-circle" href="mailto:hannahhatherell@gmail.com" target="_blank">
-                  <i class="fas fa-envelope"></i>
-                </a>
-        </li>
-      </ul>
-  </footer>
-
-  <div class="copyright py-4 text-center" <div class="container pt-1">
-    <small>©2024 Built by Hannah Hatherell | Hosted on Github <i class="fab fa-github"></i></small>
-  </div>
-  </div>
-
-  <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
-  <div class="scroll-to-top d-lg-none position-fixed ">
-    <a class="js-scroll-trigger d-block text-center text-white rounded" href="#page-top">
-        <i class="fa fa-chevron-up"></i>
-      </a>
-  </div>
-
-
-
-
-  <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-  <!-- Plugin JavaScript -->
-  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-  <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
-
-  <!-- Contact Form JavaScript -->
-  <script src="js/jqBootstrapValidation.js"></script>
-  <script src="js/contact_me.js"></script>
-
-  <!-- Custom scripts for this template -->
-  <script src="js/freelancer.min.js"></script>
-
-</body>
+      <section style="background-color: #f8f9fa;" class="pt-5">
+        <footer id="connect" class="center text-center pb-3" id="footer">
+          <div class="container">
+            <ul class="list-inline">
+              <li class="list-inline-item">
+                <p style="color: #868e96;" class="font-weight-bold list-inline">Let's Connect > </p>
+              </li>
+              <li class="list-inline-item">
+                <a class="text-center connect" href="https://www.linkedin.com/in/hannahhatherell/" target="_blank">
+                    <i class="fab fa-linkedin-in"></i>
+                  </a>
+              </li>
+              <li class="list-inline-item">
+                <a class="text-center" href="mailto:hannahhatherell@gmail.com" target="_blank">
+                    <i class="fas fa-envelope"></i>
+                  </a>
+              </li>
+            </ul>
+            <small>©2024 Built by Hannah Hatherell | Hosted on Github <i class="fab fa-github"></i></small>
+          </div>
+        </footer>
+      </section>
 
 </html>
