i need to go to sleep
there was horizontal mobile scroll from the new scope item menu and it was bothering me

--- a/bonfire.html
+++ b/bonfire.html
@@ -179,8 +179,7 @@
   <div class="bb mb-5 pt-5"></div>-->
 
   <section class="pb-5 pt-4">
-    <div class="container center">
-      <ul class="scope-list">
+      <ul class="scope-list center">
         <li>Illustration</li>
         <li>UXR</li>
         <li>Campaign Creative</li>
@@ -188,7 +187,6 @@
         <li>Type Layout</li>
         <li>LP Design</li>
       </ul>
-    </div>
   </section>
 
   <section class="pb-0">
