--- a/canopy.html
+++ b/canopy.html
@@ -134,8 +134,7 @@
   </section>
 
   <section class="pb-4 pt-5">
-    <div class="container center">
-      <ul class="scope-list">
+      <ul class="scope-list center">
         <li>Preflighting</li>
         <li>Photography</li>
         <li>Photo Retouching</li>
