--- a/cmg.html
+++ b/cmg.html
@@ -182,8 +182,7 @@
   </section>
 
   <section class="pb-4">
-    <div class="container center">
-      <ul class="scope-list">
+      <ul class="scope-list center">
         <li>Magazine Design</li>
         <li>Typesetting</li>
         <li>Design Process</li>
