--- a/euna.html
+++ b/euna.html
@@ -231,17 +231,17 @@
     </div>
   </section>-->
 
+
   <section class="pb-4 pt-4">
-    <div class="container center">
-      <ul class="scope-list">
-        <li>Brand</li>
-        <li>Marketing</li>
-        <li>UX</li>
-        <li>Frontend</li>
-        <li>Events</li>
-        <li>Digital</li>
-        <li>Frontend</li>
-      </ul>
+    <ul class="scope-list center">
+      <li>Brand</li>
+      <li>Marketing</li>
+      <li>UX</li>
+      <li>Frontend</li>
+      <li>Events</li>
+      <li>Digital</li>
+      <li>Frontend</li>
+    </ul>
   </section>
 
   <!-- <div class="bb mb-5 pt-0"></div>-->
