--- a/hhi.html
+++ b/hhi.html
@@ -164,8 +164,7 @@
   </div>
 
   <section class="pb-4 pt-5">
-    <div class="container center">
-      <ul class="scope-list">
+      <ul class="scope-list center">
         <li>Digital Artwork</li>
         <li>Procreate (iPad)</li>
         <li>Logo Design</li>
