--- a/masterpiece-vr.html
+++ b/masterpiece-vr.html
@@ -219,6 +219,17 @@
     </div>
   </section>
 
+  <section class="pb-4">
+      <ul class="scope-list center">
+        <li>UX</li>
+        <li>Whiteboarding</li>
+        <li>Wireframing</li>
+        <li>Prototyping</li>
+        <li>User Research</li>
+        <li>Testing</li>
+      </ul>
+  </section>
+
   <section class="pb-3 pt-3">
     <div class="container">
       <div class="row pt-4 pb-2">
