--- a/nng.html
+++ b/nng.html
@@ -170,14 +170,17 @@
       <img class="img-fluid pt-5 pb-3" src="img/nng/spread.png" alt="">
       <h3 style="font-size: 18px; font-weight: 600" class="pt-4">Inside Spread Example</h3>
       <p>The spread is clean, simple and modern, utilizing hierarchy and a single column layout. Cohesive section covers indicate new chapter breaks. These colours pull from the same indigo colour scheme used in the cover design.</p>
-      <ul class="scope-list pt-4">
+    </div>
+  </section>
+
+  <section class="pb-4">
+      <ul class="scope-list center">
         <li>Brainstorming</li>
         <li>Design Thinking</li>
         <li>Wordmapping</li>
         <li>Illustration</li>
         <li>Typesetting</li>
       </ul>
-    </div>
   </section>
 
   <section class="pb-3 pt-3">
