--- a/csp.html
+++ b/csp.html
@@ -246,8 +246,7 @@
   </section>
 
   <section class="pb-4">
-    <div class="container center">
-      <ul class="scope-list">
+      <ul class="scope-list center">
         <li>UX</li>
         <li>Whiteboarding</li>
         <li>Wireframing</li>
