--- a/questica.html
+++ b/questica.html
@@ -158,8 +158,7 @@
   </div>
 
   <section class="pb-3 pt-5">
-    <div class="container center">
-      <ul class="scope-list">
+      <ul class="scope-list center">
         <li>Illustration</li>
         <li>Campaign Creative</li>
         <li>Print Design</li>
