this one was important..

--- a/cmg.html
+++ b/cmg.html
@@ -90,7 +90,7 @@
     </div>
   </section>
 
-  <section class="mx-auto">
+  <section class="mx-auto cmg-mobile">
     <div class="col-sm-6 mx-auto pb-0">
         <div class="text-center mx-auto">
           <img class="img-fluid" src="img/cmg/luxe-spread-2.png" alt="">
