--- a/canopy.html
+++ b/canopy.html
@@ -129,7 +129,7 @@
     <div class="container center pt-5">
         <img class="img-fluid" src="img/canopy/spc.png">
         <img class="img-fluid" src="img/canopy/cp-4.png">
-        <img class="img-fluid" src="img/canopy/canopy.png">
+        <img class="img-fluid pt-4 pb-3" src="img/canopy/canopy.png">
     </div>
   </section>
 
