final push for now

--- a/hhi.html
+++ b/hhi.html
@@ -78,11 +78,11 @@
     </div>
   </nav>
 
-
+<section class="pl-4 pr-4">
   <div class="center pt-3">
     <div class="row pt-5">
       <div class="col-sm-6">
-        <div class="hhi pt-5 pb-2 pl-0 pr-0">
+        <div class="hhi pt-5 pb-2">
           <img class="img-fluid" src="img/halfhalt/hhi-brand.png" alt="">
         </div>
         <h2 style="font-size: 36px;">Half Halt Illustrations</h2>
@@ -95,6 +95,7 @@
       </div>
     </div>
   </div>
+  </section>
 
   <div class="container pt-0 center">
     <div class="row pt-0">
