--- a/various.html
+++ b/various.html
@@ -192,7 +192,9 @@
             </video>
       </section>
 
-      <section class="pb-3 pt-5">
+    <div class="bb pt-5"></div>
+
+      <section class="pb-3 pt-4">
         <div class="container">
           <div class="row pt-4 pb-2">
             <div class="col-sm-6 col-md-6 col-lg-6 pb-2">
